--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -305,15 +305,15 @@ LFB_huabei.2.t:"日本接受我们的要求"
 LFB_huabei.2.d:"日本提议和平"
 LFB_huabei.2.a:"好的"
 
-DMN: "西满洲自治共和国"
-DMN_ADJ: "西满洲自治共和国"
-DMN_DEF: "西满洲自治共和国"
+DMN: "西满洲缓冲区"
+DMN_ADJ: "西满洲缓冲区"
+DMN_DEF: "西满洲缓冲区"
 DMN_paternalism_party: "满洲重建委员会"
 DMN_paternalism_party_long: "满洲重建委员会"
 DMN_fascism_party: "满洲国各地残余机构"
 DMN_fascism_party_long: "满洲国各地残余机构"
-DMN_communist_party: "中国共产党-东北局"
-DMN_communist_party_long: "中国共产党-东北局"
+DMN_communist_party: "中国共产党 - 东北局"
+DMN_communist_party_long: "中国共产党 - 东北局"
 tengtianmao: "藤田茂"
 pujie1: "爱新觉罗·溥杰"
 pujie2: "爱新觉罗·溥杰"
