--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -34,12 +34,12 @@
   GAN.6.a:0"这一批是火炮"
 
   #游戏规则
-  RULE_GROUP_LFB_GAME_SETUP:0"国家路线-光自贝加尔湖来"
+  RULE_GROUP_LFB_GAME_SETUP:0"国家路线 - 光自贝加尔湖来"
   LFB_GAW_STATUS:0"西部暴动的结果"
   RULE_OPTION_LONG_YUN_WETDREAM_DISABLED:0"默认"
   RULE_OPTION_LONG_YUN_WETDREAM_DISABLED_DESC:0"龙云将会被南京政府击败，西北将会继续蛰伏，静待时机。"
   RULE_OPTION_LONG_YUN_WETDREAM_ENABLED:0"§R燃气来了！§"
-  RULE_OPTION_LONG_YUN_WETDREAM_ENABLED_DESC:0"龙云将能够攻入湖南，并与南京方面陷入僵持。这对西北的革命者们或许是个§Y机会§......"
+  RULE_OPTION_LONG_YUN_WETDREAM_ENABLED_DESC:0"龙云将能够攻入湖南，并与南京方面陷入僵持。这对西北的革命者们或许是个§Y机会§……"
 
   #新闻事件
   COX_news_event.7.t:0"[Get_newspaper_header]湖南战役"
@@ -78,9 +78,9 @@
   ##决议
   COX_Liberation_of_Lanzhou:0 "解放兰州"
   COX_Liberation_of_Lanzhou_desc:0 "\n\n\n\n\n\n§C起来，不愿做奴隶的人们！§!当西南的护国军冲进南京的城门之时，§e日寇§!便已不得不凝神谛听中华民族追求自由的怒吼。\n\n可以预见的是，日寇即将对中华大地掀起一场血腥的，旷日持久的战争，在这种情况下，唯有§D整个中华民族§!的联合才能御敌求自由。现在便是向日寇宣战的最佳时机，尽管我们在第一次夺取兰州时遭遇了挫折，但同时也取得了一定成果：日军在我们的打击之下被迫收缩，兰州城外四处活跃着§C抗日游击队§!。为了全中华民族的自由，我们将第一次与§w武装到牙齿§!的日军正面对峙。\n\n如果我们能够夺下兰州，即可有效分散我们的盟友在其他区域的压力，相信§V全中国乃至整个东亚§!一旦联合起来，我们便能够看见§M自由的曙光。§!"
-  COX_Liberation_of_Lanzhou_countdown:0 "机不可失..." 
+  COX_Liberation_of_Lanzhou_countdown:0 "机不可失…" 
   COX_Liberation_of_Lanzhou_countdown_desc:0 "护国军在西南的战术胜利打乱了日军的阵脚，驻扎兰州的西北方面军开始紧急调动。这产生了一个稍纵即逝的机会，我们必须尽快做好准备，发动进攻。" 
-  COX_Liberation_of_Lanzhou_invaded_Jap:0 "...时不再来"
+  COX_Liberation_of_Lanzhou_invaded_Jap:0 "…时不再来"
   COX_Liberation_of_Lanzhou_invaded_Jap_desc:0 "就在红军开进兰州的同时，西北军也在执行着他们的撤退计划。如果我们未能在一定时间内将他们切断，就会彻底失去这一歼灭敌军一大主力的机会。"
   COX_relation_army_old_ma:0 "联络马家残部"
   COX_relation_army_old_ma_tt:0 "这将降低我们在西北军渗透的衰减。"
