--- a/localisation/simp_chinese/COX_ideologies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_ideologies_l_simp_chinese.yml
@@ -6,3 +6,6 @@
 
  communist_liuism_subtype:0 "新民主主义"
  communist_liuism_subtype_desc:0 "£gezifu £gezifu 新民主主义常被视为毛泽东思想的一部分——在落后国家，民族资产阶级往往受制于帝国主义的竞争与根深蒂固的封建势力的压迫，势力薄弱，难以承担历史重担。故而，有组织的无产阶级就必须接过实现独立与民主的旗帜，只有代替资产阶级完成对国家的改造，才能为社会主义的实现创造历史条件。\n\n£gezifu £gezifu 在其创造者毛泽东意外去世后，“新民主主义”陆续被赋予了超出其提出者所料想的含义，也理所当然的造成了混乱与分歧——有人认为“新民主主义”与布哈林主义拥有相似的内核，是在无产阶级专政的政治框架下继续鼓励商品经济的发展；也有人认为“新民主主义”要略逊于布哈林主义，其底色仍是“资产阶级革命”，故而主张与民族资产阶级彻底的结盟，更有甚者，喊出了“剥削有功”的口号。\n\n£gezifu £gezifu 但无论党内的分歧如何严重，所有中共党员都被告知——“实现新民主主义是党在现阶段的主要使命”。而“在新民主主义的旗帜下争取民族解放”，早已成为了中共在战后最鲜明的口号。\n\n\n£six_eggs \n£gezifu £gezifu \n£gezifu £gezifu "
+
+ COX_communist_party_XIN_long:"中国共产党 - 新疆局"
+ COX_communist_party_XIN:"中国共产党 - 新疆局"
