--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -305,17 +305,48 @@ LFB_huabei.2.t:"日本接受我们的要求"
 LFB_huabei.2.d:"日本提议和平"
 LFB_huabei.2.a:"好的"
 
-DMN: "西满洲缓冲区"
-DMN_ADJ: "西满洲缓冲区"
-DMN_DEF: "西满洲缓冲区"
+
+DMN: "西满洲自治共和国"
+DMN_ADJ: "西满洲自治共和国"
+DMN_DEF: "西满洲自治共和国"
 DMN_paternalism_party: "满洲重建委员会"
 DMN_paternalism_party_long: "满洲重建委员会"
 DMN_fascism_party: "满洲国各地残余机构"
 DMN_fascism_party_long: "满洲国各地残余机构"
-DMN_communist_party: "中国共产党 - 东北局"
-DMN_communist_party_long: "中国共产党 - 东北局"
+DMN_communist_party: "中国共产党-东北局"
+DMN_communist_party_long: "中国共产党-东北局"
 tengtianmao: "藤田茂"
 pujie1: "爱新觉罗·溥杰"
 pujie2: "爱新觉罗·溥杰"
 COX_idea_huabei_17: "作鸟兽散"
 COX_idea_huabei_18: "往日之影"
+
+LFB_huabei.3.t:"在农村"
+LFB_huabei.3.d:"£gezifu £gezifu 土改前，赛买提本是租种一小片地的佃农。虽不似农奴般完全被当作牲畜对待，却也只能仰赖巴依老爷的脸色，苦兮兮地过日子。与万千新疆农民的命运相同，他原先望不到头的苦难日子，在轰轰烈烈的土改中走到了尽头。他分到了自己的地，收了好几遭的麦子，小小的谷仓渐渐有了积蓄，孩子们脸上也有了光泽。虽然自己的生活确实越过越滋润，但赛买提仍未认同共产党人的理念，像个市侩的小商人，始终留着个心眼。\n\n£gezifu £gezifu 今天又是交粮的日子，在旧时，政府将税收指标摊派给各地的老爷，他们便翻出泛黄的账，挨家挨户地催着税和捐。税的名目更是繁杂，什么“山林税”，“水利捐”，“管理费”……整个村子无论贫富，就算是路上的一只瘦狗，都得挨一身活剐。在这一天，每个人都愁眉苦脸，不知不幸是否会降临在自己头上。但共产党废了一切苛捐杂税，代之以最高三成的田亩税，对于穷人来说，不仅远远收不到三成，有时还会视收成好坏发放一定的补助。所以人们不仅不抗拒，往往还争先恐后地赶到设立在村子边缘的税务站。\n\n£gezifu £gezifu “抗战捐…钱同志，你可别诓我们啊，怎么好端端地又得多交一笔税？”当赛买提扛着一小袋麦来到税务站时，那里早已被吵嚷着的人群围得水泄不通。\n\n£gezifu £gezifu “抗战捐，顾名思义，就是支援抗日战争的。”听到又和日本开战了，村民们马上七嘴八舌了起来。这座南疆小村中很少有汉人落户，对上一次战争的记忆并不深刻，抗日热情相较北疆或青海也自然要弱上许多。“不过这个‘捐’不是‘捐税’的‘捐’，而是‘捐赠’的意思。凡是积极支援抗战的，都是国家的功臣，政府都会给切实的好处，等仗打完了，就给他免三年的税……”\n\n£gezifu £gezifu 话音刚落，有的村民便要奔回家去。分地数年，每家每户都多少积了余粮，此时交出，便能在将来获得更大的益处，这笔帐，农民们当然算得清。“等等！”赛买提突然出声，喝住了几个跑在前面的村民，“就这样把自己一家保命的粮食给他们，你们就不怕他们这个理由是编的？”\n\n£gezifu £gezifu 农民们相视一笑，说道："
+LFB_huabei.3.a:"“他们是共产党，又不是巴依老爷，还能骗我们不成？”"
+
+LFB_huabei.4.t:"我的名字"
+LFB_huabei.4.d:"£gezifu £gezifu 大同煤矿一号坑的一名矿工从不会想到，还能再从别人和自己的嘴中听到自己的名字。\n\n£gezifu £gezifu 正如编号，他是1962年1月1日来到这里的第5位矿工。也是从那一天开始，他的名字就变成了一串数字。\n\n£gezifu £gezifu 他不知道这里是哪里，他只知道这里是一座煤矿。他的家在哪里呢？他也不知道具体方位。进县城买机织布的时候，被日本人看到是个壮小伙，就给他抓进了宪兵队，再被套上头套一通拳打脚踢送到了这里。他问过工友们，大家都是这么被强制抓进来的。\n\n£gezifu £gezifu 进来的第一天，他立刻就想逃跑，可看到四周的铁丝网、门口巡逻的日本鬼子、集合时四面对着他们的黑洞洞的枪口，他还是打消了这个想法。在这里的五年，对他而言是比种庄稼辛苦得多的五年。天刚蒙蒙亮，就被宿舍外的大喇叭喊起来，随后，日本兵粗暴地踢开漏风的宿舍门，甩动手里的鞭子。将身边的工友们一个一个挥醒。穿上灰不溜秋的工作服，吃早饭。平心而论，这里吃的比家里好一点，至少有干饭。但也只是维持在一个饿不死人的水平罢了。随后就会被赶去矿坑，在队长的带领下开始一天的工作。\n\n£gezifu £gezifu 好几里且每日延伸的矿道、几百米的竖井、沿路加固的木梁与手推矿车，这些都是他每日司空见惯的事情，正如他那从来没有干净过的衣服一样。他没有文化，所以干不了像是埋雷管爆破之类的技术活，他每天需要做的就是和另外几十个工友一起，把满载的矿车推上去。\n\n£gezifu £gezifu 又过了很久，组长看了看表，告诉他们收工了。回到地面后，他们早已黑不溜秋，像个被墨汁洗过一遍的人一样。这时，他总会想到小时候自己调皮不愿意上私塾，喝了一大口老师书案上的墨水，然后被戒尺抽手心的往事。在脑子放空的这个时候，也是队长带着日本人过来的时候，那个日本人每次都叽里咕噜地说一堆，由跟着他的翻译转达，无非是“你们在这里有吃有穿，还保证你们的安全，你们一定要好好工作。”有时还会把人拉出队列一顿打。此外每个月，都会宣布增加生产定额，不过工具倒鲜有革新，下矿时发给你，上来时一个一个收走。\n\n£gezifu £gezifu 待久了之后，他也会想着逃跑，就像其他很多人一样。不过逃出去的绝大多数人都在第二天早上的例会时“回来”：尸体被绳子绑着，拖在地上，日本兵攥着绳子，骑着高头大马，在门口的空地上骑着马，尸体被拖行。嘴里叫骂着不许离开这里，不然这就是下场。再把尸体脖子套上绳子吊起来，直到脖子断了为止。\n\n£gezifu £gezifu 在这样的环境里，一串数字替代了他的名字，他丧失了自己的名字。他想过或许有一天他会像前人一样，埋在矿里。\n\n£gezifu £gezifu 这天，外面先是一声爆炸，接着便是枪声四起。组长和他们都被惊醒，谁也不敢往外看。躲在宿舍里大气不敢出，一整个宿舍都笼罩在不安的气氛中。等到后半夜枪声稀疏了，突然有人敲门，“有人吗？”组长忙把门打开，是两位荷枪实弹的士兵，他们的军服，没有人见过。“工人兄弟们！”站在前面的那个士兵向房间里喊话，“我们是共产党领导的红军，我们已经把这里的鬼子赶跑了！现在我们需要对这座煤矿进行登记，请各位工友们，依次过来登记！”\n\n£gezifu £gezifu 等轮到他的时候，一瞬间，他似乎忘记了自己的名字，那个他、这个数字，似乎没有关联，两个平行的人生。午夜睡不着想家时，嘴里轻轻吐出aa三个音节。下一个瞬间，他望着面前比他高上一头的正在写字的士兵，哆哆嗦嗦地："
+LFB_huabei.4.a:"“我叫……呃……我叫，我叫孙兴民！”"
+
+LFB_huabei.5.t:"洛阳解放"
+LFB_huabei.5.d:"£gezifu £gezifu 洛阳，古称神都、洛邑、洛京。在前不久结束的战役中，战士们凭借着掩体和废墟逐渐渗透进洛阳市的中心，终于，在一声枪响后，洛阳解放战役基本宣告结束，剩余的俘虏被转送至后方处理。\n\n£gezifu £gezifu 王贵安失神地望着眼前的一片废墟，他是个土生土长的洛阳人，在他小时候，这里还是一片广袤无际的山区丘陵，他有时候顽皮，跑到山顶去和小伙伴们玩捉迷藏，偶尔又会去一些似乎是很久很久以前的人们所建起来的破房子那去寻找宝藏。但他总是会被妈妈发现，在被痛打一顿后，妈妈像是唱摇篮曲一般跟王贵安讲起这个古城的故事和生活在这里的人们的故事。但自从日本鬼子占领了大半个中国后，王贵安和父母在逃难的过程中走失了，他已经整整十年没有见过他的父母了。\n\n£gezifu £gezifu 小时候王贵安听大人说，时间是个了不得的东西，久了就什么事情都忘了。但亲生父母的面容，声音，往事，如同刀刻一般在他的脑海中久久不散，一天比一天清晰，也一天比一天痛苦。他忘不掉也不敢忘，这份仇恨太过强烈，即使重返故乡的土地，也不能使他释怀，小时候在废墟里痛哭时听到的飞机轰鸣声、喊叫声，现在仍然在耳边响起，只是这次，他不再是孩子了。\n\n£gezifu £gezifu 他的眼睛又重新恢复神采，端起枪继续向前出发。\n\n——————————————————\n\n£gezifu £gezifu “据粗略统计，洛阳市除周边村庄外，其余基础设施，工业设备均受到不同程度的人为毁坏，九成以上的日军已被歼灭，一成日军携带着一部分重要资料逃往满洲。洛阳重要文物如龙门石窟，白马寺等具有重要历史意义的文物均受到不同程度的损失，大量佛像被损毁，大量文物古籍被盗走，侵略者如果带不走的就砸烂，放火，如同一百多年前的英法联军对圆明园所犯下的恶行那样。自然环境被严重破坏，对洛阳的修复工作迫在眉睫，这座在中国历史上具有重要意义的城市，见证了如隋唐等朝代兴盛衰亡的古都，如今竟近乎毁于侵略者之手，笔者恨不能提枪上阵，剿灭敌人……以前我们只能眼睁睁地看着侵略者玷污我们的土地，侵犯我们的人民，亵渎我们的文化，但是现在，红军来了，红军来了！他们对着整个黑暗世界宣告着对日本军国主义侵略者的最强烈反攻已经开始，这是中国人民的伟大时刻，也是中华民族的伟大时刻！”"
+LFB_huabei.5.a:"编者注：［本文章刊登于洛阳解放当日的洛阳晚报，未经删改，编辑室内闻者无不落泪。］"
+
+LFB_huabei.6.t:"进京"
+LFB_huabei.6.d:"£gezifu £gezifu 此刻，北平城中，政府大院内一片混乱，不断有人抱着一摞摞文件向空地上冒火的铁皮桶里倒，从一楼到六楼，时时有人在翻箱倒柜地搜集角落里的纸片，刻刻有人将手中的文件抛洒出去。\n\n£gezifu £gezifu 视线离开这里，前往外城，德胜门、安定门内外的民房正在熊熊燃烧。警察失去了往日的威严，没有日本人撑腰，他们这些外地调来的只能关紧警局大门，任由外面的秩序不断恶化。北平城此前从未被共军占领，所以市民们正在研究门口挂什么好。大清的龙旗显然不行，民国的青天白日呢？这帮人信马克思，可能也不行。思来想去，扯了一块红布，一块白布，到时候两面一起挂！\n\n£gezifu £gezifu 翌日，经过一天一夜的战斗，城外的枪炮声渐稀，偶有枪声响起。城门被炸开了，城墙内外联系断绝，不知道城外的百姓如何，不过这不是内城的老北京们最关心的，家家户户房门紧闭，北城侥幸存活的居民，躲在藏兵洞中。大家都在等待着自己的命运。\n\n£gezifu £gezifu 不知是谁大喊了一声“过兵了！”只见一队队穿着朴素的士兵沉默地从西直门进入北京城内。家家户户依旧家门紧闭，一双双眼睛从夹缝中偷偷地盯着这群士兵。想象中热闹的进城仪式并没有发生。"
+LFB_huabei.6.a:"我们还有很多事情要做！"
+
+LFB_huabei.7.t:"惨象"
+LFB_huabei.7.d:"£gezifu £gezifu 根据陕西红军保存下的中央资料，山东，一直都是各大抗日根据地里最活跃的一个。那里的人民全力生产，那里的游击队奇兵频出，那里的根据地军民和谐，那里的抗日情绪永远高涨……\n\n£gezifu £gezifu 可当红军时隔20年又来到济南边的一个村庄时，他们却没有看见半点生机。\n\n£gezifu £gezifu 红军并没有看见一个他们设想的饱受战争摧残仍挣扎求生的村子，而是一个流淌着血与泪的死村。\n\n£gezifu £gezifu 村子里到处都是燃烧的房屋，村子外老远就能闻见味，战士们皱着眉头捂着鼻，一步步向村庄靠近，可是为什么在呛鼻的烟中，还有一股烤肉的奇怪味道？继续往那走吧，不过可得小心，可能还有没来得及撤离的日军埋伏着他们，派排里最机灵的小张去侦察，他会好好看的。小张先行朝着村庄去了，但过了一会，却传来他凄厉的叫喊。\n\n£gezifu £gezifu 怎么回事，小张遭了埋伏？战士们的心骤然缩紧，快步赶上去。小张的叫喊还在继续，呜咽在空中久久不能散去。战士赶到了村口，一个被戕害的村民躺在那里，双眼满是恐惧。战士们的枪都有点握不紧了，他们大概明白小张凄厉的叫喊是为什么了。村子里四处都是村民的尸体，他们有的胸上有一团血花，有的被捆在门柱上，有的被割去了双耳，有的嘴中插着一把刺刀。每个战士都咬紧了牙齿，每个人都死死攥住他们的枪。\n\n£gezifu £gezifu 在村子的中心，他们找到了小张，他跪在地上，以头抢地不停呜咽着。他的身旁躺着一个妇女的尸体，一丝不挂。她的腹被剖开来，双腿张着，双手掌心各有一把刺刀，她的双目圆睁着，了无生气的眼珠中似乎蕴藏着无止境的憎恨，排长踉跄着走过去，试图为她阖上双眼，却怎么也抹不闭她的眼，身经百战的排长怔怔地看着这双仇恨的眼睛，呜呜地哭了。\n\n£gezifu £gezifu 两个小时后，全排在村子中心沉默地集合，面对着二百余具村民的尸体，每个人都一言不发，但泪水早已掩面。排长攥着一面日本的军旗，狠狠掼在地上。"
+LFB_huabei.7.a:"我们会让那群畜生血债血偿！"
+
+LFB_huabei.8.t:"遗老遗少"
+LFB_huabei.8.d:"£gezifu £gezifu “满洲”，或称东北，日本帝国的冠上明珠，共荣圈最有名的工业基地，关东军的总部所在地。\n\n£gezifu £gezifu 当红军冲进溥仪那富丽堂皇的“皇宫”，眼前宫中内的满洲皇室们刚收拾好金银细软正往外跑，\n\n£gezifu £gezifu 早在红军来之前，他们就通过收拾行李的随从那了解到，红军和南边的龙云所领导的护国军已经将高伪政府彻底打垮，随时准备出征山海关，到时候，不仅是他们满人这把“龙椅”还在不在这里要打一个问号，他见过日本人对待俘虏的态度，一想到这，这帮满清的遗老遗少们就冷汗直流，但为了维护他们那可悲的自尊心，和他们残留的那一丝侥幸心，他们并没有第一时间跟随随从一起逃往朝鲜，逃往日本。\n\n£gezifu £gezifu “溥杰，最近龙体贵安啊？”领头的战士大声的跟溥杰开玩笑道。“哼！现如今竟落得这般田地，也怨不得别人，要杀要剐随你们共匪！”战士们闻言哈哈大笑，宫内顿时充满了欢乐的气息。但他们可是坐立不安，几十个黑洞洞的枪口对着他们，他们生怕自己说错了话，就会被立马毙了。因此也不敢呵斥红军的“无礼”。“溥杰，我们不是旧军阀，也不是日本鬼子，我们将会把你送去人民法庭，让人民和法律去审判你。”那帮所谓“八旗后代”的遗老遗少里面还有人不死心，指着领头的战士说：“我不相信！你们共匪总是谎话连篇，大日本帝国关东军岂能被你们轻松击败？我大满洲帝国地大物博，物产丰厚，料你们也不能再往前推进一步！”就这样僵持了几分钟，四周突然响起了嘈嘈杂杂的脚步声，说话声，以及喘气声。\n\n£gezifu £gezifu 大门被推开了，而后是蜂拥而至的人群，他们手上有的拿着报纸，有的拿着石子，即使经过及时的制止，也还是有几块扔到了溥杰。溥杰突然觉得自己额头沾上了一种温热的东西。他一摸，是红色的液体，脑子里突然像天旋地转一样，眼冒金星。在失去意识的最后一刻，他清晰地听到了一句话：“快送他去医院！”\n\n£gezifu £gezifu 在住院的这一周，溥杰真正地明白了一个道理：日本人真的被赶跑了，真的被赶回鸭绿江以南了。医院里的日文标语全部被替换，墙上贴着的战争宣传海报也全部被撕下，改为宣传社会主义的政治海报，医院里再也不见嚣张跋扈的日本陆军士兵，只有井然有序的秩序：人们安静地排队、安静地输液、安静地付钱。更重要的是，在他醒来的那一天，床头柜上摆了一份报纸，他拿起来一看，头条用极其醒目的大字赫然然地写着：“日本帝国主义侵略者已全数从满洲撤离至鸭绿江以南，中国人民的抗日战争取得了决定性胜利！”下面一条是：“我军已成功从日军手中夺回大部分未被销毁或者搬走的重工业设备和工厂等基础设施，这将为我国未来工业化和机械化打下决定性基础！”配图是一些东北边疆人民在鸭绿江边欢欣鼓舞的拥抱场面。\n\n£gezifu £gezifu 溥杰顿时觉得头疼，甚至比被人用石头砸更头疼。但接下来的几天，他并没有受到很残酷的刑罚，很严格的审讯，医护人员也似乎只是把他当作一个普通公民，吃的穿的住的用的也就和隔壁病床的一样。甚至病友还跟他讲起共产党如何如何好，讲得如同神话故事一般。从病友那，溥杰了解到，如果解放之前当了帝国主义走狗，但解放后主动归降，认罪态度诚恳，观察期间老实本分，就能获得劳改机会，劳改营里没有等级之分，所有人统一用编号命名。\n\n£gezifu £gezifu 无论这位病友讲的是不是真实的，溥杰心中的不满与恐惧也减轻了一些，这让他想起了小时候学过的一句话，虽然语境和语义都不怎么贴切，但溥杰也想不到更好的了："
+LFB_huabei.8.a:"“君行仁政，斯民亲其上、死其长矣。”"
+
+COX_huabei_dongbeitip_tt:"§X关山§!飞渡\n--------------\n\n\n£huabeibeijingdu \n\n\n\n£gezifu £gezifu §Y“国际悲歌歌一曲，狂飙为我从天落。”§!随着第三次£huguojun £xibeisuqu §V抗日民族§!§z统一战线§!的正式成立，红军吹响了§C解放全中国§!的号角，正式向华北、东北地区进军。但与此同时，在护国战争愈演愈烈后，£rijun §j日寇§!也在紧锣密鼓地做着防御准备，他们现在正在紧急进行£huabeiri §Z“华北绝对防御圈”§!的修筑，同时也在东北地区筹备着£manzhouri §O“满洲决死守备圈”§!的建立，力求阻碍£huguojun £xibeisuqu §m中华民族§!夺取自由的脚步。随着时间的推移，£rijun §j日寇§!所修筑的防线会愈来愈坚固，我们进攻的代价会不断上升，直至完全§V无法推进战线§!。\n\n£gezifu £gezifu 在解放华北、东北的过程中，我们并非只有正面战场的£xibeisuqu §V红军§!可以依靠。§u群众路线§!一直都是我党的§Y优良传统§!，充分与§u日占区群众§!结合的敌后工作无疑能够对§A日军防御工事§!的修筑予以重大打击，我们需要紧紧依靠敌占区的群众，将整个华北地区都开辟为我们的敌后战场，§A破坏防御工事§!的修筑工作，为我们的£xibeisuqu §V红军战士§!们的进军铺平道路。\n\n£gezifu £gezifu §G“疏枝立寒窗，笑在百花前。奈何笑容难为久，春来反凋残。残固不堪残，何须自寻烦？花落自有花开日，蓄芳待来年。”§!"
+
+COX_huabei_dongbeihunluantips_tt:"£gezifu £gezifu 在护国战争愈演愈烈后，§V民族革命§!的号角已经吹响，£huabeiri §j华北§!£manzhouri §O东北§!各地人心浮动，到处都是聚众揭竿而起的武装。尽管£rijun §j日军§!在第一时间对城市地区进行了军管，但仍无法阻止混乱在§G农村地区§!如烈火般蔓延。£hunluandu §D混乱度§!表示一个地区的混乱程度，£hunluandu §D混乱度§!越高，£rijun §j日军§!就必须花费更多精力在§w维稳§!之上，他们筑垒的速度也将§w受到影响§!。我们的诸多行动都会影响这个数值，当£hunluandu §D混乱度§!达到某个阈值时，我们便可以联络合作者，彻底破坏£rijun §j日军§!的筑垒企图，让他们陷入£xibeisuqu §V人民战争的汪洋大海！§!但必须注意的是，抗日武装本身良莠不齐，§w过高的§!£hunluandu §D混乱度§!§x意味着广大的权力真空§!，会给我们在§w战后的接管工作§!造成§w极大的麻烦§!，如果£hunluandu §D混乱度§!§w过高§!，我们很可能无法有效地§w接管§!该地区。\n\n£gezifu £gezifu 而£youshidu §G“优势度”§!则反映了我们民族解放事业的进展。当£huabeiri §j华北§!的解放区达到了§w一定规模§!，我们就必须着手维护那里的稳定，恢复生产，动员那里的人民加入我们的事业。"
+
+COX_huabei_huabeitips_tt:"£gezifu £gezifu 面对强大凶残的£rijun §O日军§!，我们难以在正面战场与之匹敌。但他们终究是在我们的土地上作战，从£manzhouri §O满洲§!的工厂到贯穿£huabeiri §j华北§!的运输线，无论前线后方，都活跃着中国人的身影。并不是所有中国人都§j甘愿俯身为奴§!，在£rijun §O日本人§!看不到的角落，反抗之声正在滋长，一旦£xibeisuqu §V动乱度§!达到某个阈值，我们就可以采取必要的行动，袭扰后勤，破坏生产，最终将敌人淹没在人民战争的汪洋大海之中！"
