--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -125,7 +125,7 @@ COX_LOSHIDU_A: "议案预期落实度"
 COX_LOSHIDU_B: "该议案不需要落实度"
 
 
-
+COX_huabei_dongbeifangananniu_tt: "§Y通过对解放区合理地下达议案，对巩固我们的政权和推进战线都将大有裨益。§!"
 
 
 
@@ -238,10 +238,10 @@ COX_huabei_dongbei_hunluandu_12: "[?huabei_state_12_hunluan_index]"
 COX_huabei_dongbei_hunluandu_13: "[?huabei_state_13_hunluan_index]"
 
 
-COX_huabei_zhengzhou: "§Y郑州§!"
-COX_huabei_peking: "§Y北京§!"
-COX_huabei_jinan: "§Y济南§!"
-COX_huabei_taiyuan: "§Y太原§!"
+COX_huabei_zhengzhou: "§Y郑州§!\n--------------\n\n\n£zhengzhoubeijing \n\n\n\n中华文明的发源地早已被侵略者及其走狗所玷污。日寇和保卫团的刺刀总是蒙着一层粘稠的暗红，城中蜿蜒的河流则堆满了反抗者和无辜者的尸首。就连黄河也被这血色染红，于是她咆哮着从远方召来了复仇的浪潮。"
+COX_huabei_peking: "§Y北京§!\n--------------\n\n\n£pekingbeijing \n\n\n\n如果你偶然抬头看见古城墙上覆盖的青苔，也许会感慨封建王朝的兴盛衰亡，但当你看到天安门时，就只剩下惊叹。如今，门楼和城墙上的机枪与耸立在大地上的格格不入的碉堡，无一不显示着日本对于中国北方政治经济中心的统治。"
+COX_huabei_jinan: "§Y济南§!\n--------------\n\n\n£jinanbeijing \n\n\n\n作为日本华北派遣军的总部，济南被打造成了一座难以企及的堡垒。从空中的巡逻飞机到黄河上的炮艇，城中的每个角落都密布着杀意。然而，一旦这座城市落入抗日力量手中，不多时解放的红旗就会飘扬在黄海的岸旁。"
+COX_huabei_taiyuan: "§Y太原§!\n--------------\n\n\n£taiyuanbeijing \n\n\n\n拨开层层叠叠的铁丝网，往日当地军阀留下的兵工厂此刻正不分日夜地运转，将这片土地的血液锻造成钢与火，以阻挡抗日势力进军华北平原的步伐。晋阳之地曾见证了无数王朝的迭起兴衰，而现在它将见证中华大地的命运。"
 
 COX_huabei_dongbei_stateSJ_1: "§Y当地人口:\n204.16K\n当地生产总值:\n[?state_GDP_contribution_B|2]§!"
 COX_huabei_dongbei_stateSJ_2: "蒙疆中部"
@@ -306,15 +306,15 @@ LFB_huabei.2.d:"日本提议和平"
 LFB_huabei.2.a:"好的"
 
 
-DMN: "西满洲缓冲区"
-DMN_ADJ: "西满洲缓冲区"
-DMN_DEF: "西满洲缓冲区"
+DMN: "西满洲自治共和国"
+DMN_ADJ: "西满洲自治共和国"
+DMN_DEF: "西满洲自治共和国"
 DMN_paternalism_party: "满洲重建委员会"
 DMN_paternalism_party_long: "满洲重建委员会"
 DMN_fascism_party: "满洲国各地残余机构"
 DMN_fascism_party_long: "满洲国各地残余机构"
-DMN_communist_party: "中国共产党 - 东北局"
-DMN_communist_party_long: "中国共产党 - 东北局"
+DMN_communist_party: "中国共产党-东北局"
+DMN_communist_party_long: "中国共产党-东北局"
 tengtianmao: "藤田茂"
 pujie1: "爱新觉罗·溥杰"
 pujie2: "爱新觉罗·溥杰"
@@ -345,8 +345,8 @@ LFB_huabei.8.t:"遗老遗少"
 LFB_huabei.8.d:"£gezifu £gezifu “满洲”，或称东北，日本帝国的冠上明珠，共荣圈最有名的工业基地，关东军的总部所在地。\n\n£gezifu £gezifu 当红军冲进溥仪那富丽堂皇的“皇宫”，眼前宫中内的满洲皇室们刚收拾好金银细软正往外跑，\n\n£gezifu £gezifu 早在红军来之前，他们就通过收拾行李的随从那了解到，红军和南边的龙云所领导的护国军已经将高伪政府彻底打垮，随时准备出征山海关，到时候，不仅是他们满人这把“龙椅”还在不在这里要打一个问号，他见过日本人对待俘虏的态度，一想到这，这帮满清的遗老遗少们就冷汗直流，但为了维护他们那可悲的自尊心，和他们残留的那一丝侥幸心，他们并没有第一时间跟随随从一起逃往朝鲜，逃往日本。\n\n£gezifu £gezifu “溥杰，最近龙体贵安啊？”领头的战士大声的跟溥杰开玩笑道。“哼！现如今竟落得这般田地，也怨不得别人，要杀要剐随你们共匪！”战士们闻言哈哈大笑，宫内顿时充满了欢乐的气息。但他们可是坐立不安，几十个黑洞洞的枪口对着他们，他们生怕自己说错了话，就会被立马毙了。因此也不敢呵斥红军的“无礼”。“溥杰，我们不是旧军阀，也不是日本鬼子，我们将会把你送去人民法庭，让人民和法律去审判你。”那帮所谓“八旗后代”的遗老遗少里面还有人不死心，指着领头的战士说：“我不相信！你们共匪总是谎话连篇，大日本帝国关东军岂能被你们轻松击败？我大满洲帝国地大物博，物产丰厚，料你们也不能再往前推进一步！”就这样僵持了几分钟，四周突然响起了嘈嘈杂杂的脚步声，说话声，以及喘气声。\n\n£gezifu £gezifu 大门被推开了，而后是蜂拥而至的人群，他们手上有的拿着报纸，有的拿着石子，即使经过及时的制止，也还是有几块扔到了溥杰。溥杰突然觉得自己额头沾上了一种温热的东西。他一摸，是红色的液体，脑子里突然像天旋地转一样，眼冒金星。在失去意识的最后一刻，他清晰地听到了一句话：“快送他去医院！”\n\n£gezifu £gezifu 在住院的这一周，溥杰真正地明白了一个道理：日本人真的被赶跑了，真的被赶回鸭绿江以南了。医院里的日文标语全部被替换，墙上贴着的战争宣传海报也全部被撕下，改为宣传社会主义的政治海报，医院里再也不见嚣张跋扈的日本陆军士兵，只有井然有序的秩序：人们安静地排队、安静地输液、安静地付钱。更重要的是，在他醒来的那一天，床头柜上摆了一份报纸，他拿起来一看，头条用极其醒目的大字赫然然地写着：“日本帝国主义侵略者已全数从满洲撤离至鸭绿江以南，中国人民的抗日战争取得了决定性胜利！”下面一条是：“我军已成功从日军手中夺回大部分未被销毁或者搬走的重工业设备和工厂等基础设施，这将为我国未来工业化和机械化打下决定性基础！”配图是一些东北边疆人民在鸭绿江边欢欣鼓舞的拥抱场面。\n\n£gezifu £gezifu 溥杰顿时觉得头疼，甚至比被人用石头砸更头疼。但接下来的几天，他并没有受到很残酷的刑罚，很严格的审讯，医护人员也似乎只是把他当作一个普通公民，吃的穿的住的用的也就和隔壁病床的一样。甚至病友还跟他讲起共产党如何如何好，讲得如同神话故事一般。从病友那，溥杰了解到，如果解放之前当了帝国主义走狗，但解放后主动归降，认罪态度诚恳，观察期间老实本分，就能获得劳改机会，劳改营里没有等级之分，所有人统一用编号命名。\n\n£gezifu £gezifu 无论这位病友讲的是不是真实的，溥杰心中的不满与恐惧也减轻了一些，这让他想起了小时候学过的一句话，虽然语境和语义都不怎么贴切，但溥杰也想不到更好的了："
 LFB_huabei.8.a:"“君行仁政，斯民亲其上、死其长矣。”"
 
-COX_huabei_dongbeitip_tt:"§x关山§!飞渡\n--------------\n\n\n£huabeibeijingdu \n\n\n\n£gezifu £gezifu §Y“国际悲歌歌一曲，狂飙为我从天落。”§!随着第三次£huguojun £xibeisuqu §V抗日民族§!§z统一战线§!的正式成立，红军吹响了§C解放全中国§!的号角，正式向£huabeiri §r华北§!、£manzhouri §O东北§!地区进军。但与此同时，在护国战争愈演愈烈后，£rijun §j日寇§!也在紧锣密鼓地做着防御准备，他们现在正在紧急进行£huabeiri §r“华北绝对防御圈”§!的修筑，同时也在东北地区筹备着£manzhouri §O“满洲决死守备圈”§!的建立，力求阻碍£huguojun £xibeisuqu §m中华民族§!夺取自由的脚步。随着时间的推移，£rijun §j日寇§!所修筑的防线会愈来愈坚固，我们进攻的代价会不断上升，直至完全§V无法推进战线§!。\n\n£gezifu £gezifu 在解放华北、东北的过程中，我们并非只有正面战场的£xibeisuqu §V红军§!可以依靠。§u群众路线§!一直都是我党的§Y优良传统§!，充分与§u日占区群众§!结合的敌后工作无疑能够对§A日军防御工事§!的修筑予以重大打击，我们需要紧紧依靠敌占区的群众，将整个华北地区都开辟为我们的敌后战场，§A破坏防御工事§!的修筑工作，为我们的£xibeisuqu §V红军战士§!们的进军铺平道路。\n\n£gezifu £gezifu §G“疏枝立寒窗，笑在百花前。奈何笑容难为久，春来反凋残。残固不堪残，何须自寻烦？花落自有花开日，蓄芳待来年。”§!"
+COX_huabei_dongbeitip_tt:"§X关山§!飞渡\n--------------\n\n\n£huabeibeijingdu \n\n\n\n£gezifu £gezifu §Y“国际悲歌歌一曲，狂飙为我从天落。”§!随着第三次£huguojun £xibeisuqu §V抗日民族§!§z统一战线§!的正式成立，红军吹响了§C解放全中国§!的号角，正式向华北、东北地区进军。但与此同时，在护国战争愈演愈烈后，£rijun §j日寇§!也在紧锣密鼓地做着防御准备，他们现在正在紧急进行£huabeiri §Z“华北绝对防御圈”§!的修筑，同时也在东北地区筹备着£manzhouri §O“满洲决死守备圈”§!的建立，力求阻碍£huguojun £xibeisuqu §m中华民族§!夺取自由的脚步。随着时间的推移，£rijun §j日寇§!所修筑的防线会愈来愈坚固，我们进攻的代价会不断上升，直至完全§V无法推进战线§!。\n\n£gezifu £gezifu 在解放华北、东北的过程中，我们并非只有正面战场的£xibeisuqu §V红军§!可以依靠。§u群众路线§!一直都是我党的§Y优良传统§!，充分与§u日占区群众§!结合的敌后工作无疑能够对§A日军防御工事§!的修筑予以重大打击，我们需要紧紧依靠敌占区的群众，将整个华北地区都开辟为我们的敌后战场，§A破坏防御工事§!的修筑工作，为我们的£xibeisuqu §V红军战士§!们的进军铺平道路。\n\n£gezifu £gezifu §G“疏枝立寒窗，笑在百花前。奈何笑容难为久，春来反凋残。残固不堪残，何须自寻烦？花落自有花开日，蓄芳待来年。”§!"
 
-COX_huabei_dongbeihunluantips_tt:"£gezifu £gezifu §W在护国战争愈演愈烈后，§!§V民族革命§!的号角已经吹响，£huabeiri §r华北§!£manzhouri §O东北§!各地人心浮动，到处都是聚众揭竿而起的武装。尽管£rijun §j日军§!在第一时间对城市地区进行了军管，但仍无法阻止混乱在§G农村地区§!如烈火般蔓延。\n\n£hunluandu §D混乱度§!表示一个地区的混乱程度，£hunluandu §D混乱度§!越高，£rijun §j日军§!就必须花费更多精力在§Y维稳§!之上，他们筑垒的速度也将§Y受到影响§!。我们的诸多行动都会影响这个数值，当£hunluandu §D混乱度§!达到某个阈值时，我们便可以联络合作者，彻底破坏£rijun §j日军§!的筑垒企图，让他们陷入£xibeisuqu §V人民战争的汪洋大海！\n\n§!但必须注意的是，抗日武装本身良莠不齐，§Y过高的§!£hunluandu §D混乱度§!§x意味着广大的权力真空§!，会给我们在§Y战后的接管工作§!造成§Y极大的麻烦§!，如果£hunluandu §D混乱度§!§Y过高§!，我们很可能无法有效地§Y接管§!该地区。\n\n£gezifu £gezifu 而£youshidu §G“优势度”§!则反映了我们民族解放事业的进展。当£huabeiri §r华北§!的解放区达到了§Y一定规模§!，我们就必须着手维护那里的稳定，恢复生产，动员那里的人民加入我们的事业。"
+COX_huabei_dongbeihunluantips_tt:"£gezifu £gezifu 在护国战争愈演愈烈后，§V民族革命§!的号角已经吹响，£huabeiri §j华北§!£manzhouri §O东北§!各地人心浮动，到处都是聚众揭竿而起的武装。尽管£rijun §j日军§!在第一时间对城市地区进行了军管，但仍无法阻止混乱在§G农村地区§!如烈火般蔓延。£hunluandu §D混乱度§!表示一个地区的混乱程度，£hunluandu §D混乱度§!越高，£rijun §j日军§!就必须花费更多精力在§w维稳§!之上，他们筑垒的速度也将§w受到影响§!。我们的诸多行动都会影响这个数值，当£hunluandu §D混乱度§!达到某个阈值时，我们便可以联络合作者，彻底破坏£rijun §j日军§!的筑垒企图，让他们陷入£xibeisuqu §V人民战争的汪洋大海！§!但必须注意的是，抗日武装本身良莠不齐，§w过高的§!£hunluandu §D混乱度§!§x意味着广大的权力真空§!，会给我们在§w战后的接管工作§!造成§w极大的麻烦§!，如果£hunluandu §D混乱度§!§w过高§!，我们很可能无法有效地§w接管§!该地区。\n\n£gezifu £gezifu 而£youshidu §G“优势度”§!则反映了我们民族解放事业的进展。当£huabeiri §j华北§!的解放区达到了§w一定规模§!，我们就必须着手维护那里的稳定，恢复生产，动员那里的人民加入我们的事业。"
 
-COX_huabei_huabeitips_tt:"£gezifu £gezifu §W面对强大凶残的§!£rijun §j日军§!，我们难以在正面战场与之匹敌。但他们终究是在我们的土地上作战，从£manzhouri §O满洲§!的工厂到贯穿£huabeiri §r华北§!的运输线，无论前线后方，都活跃着中国人的身影。\n\n并不是所有中国人都§j甘愿俯身为奴§!，在£rijun §j日本人§!看不到的角落，§Y反抗之声正在滋长，§!一旦£xibeisuqu §V动乱度§!达到某个阈值，我们就可以采取必要的行动，袭扰后勤，破坏生产，最终弥补敌我之间的巨大差距！"
+COX_huabei_huabeitips_tt:"£gezifu £gezifu 面对强大凶残的£rijun §O日军§!，我们难以在正面战场与之匹敌。但他们终究是在我们的土地上作战，从£manzhouri §O满洲§!的工厂到贯穿£huabeiri §j华北§!的运输线，无论前线后方，都活跃着中国人的身影。并不是所有中国人都§j甘愿俯身为奴§!，在£rijun §O日本人§!看不到的角落，反抗之声正在滋长，一旦£xibeisuqu §V动乱度§!达到某个阈值，我们就可以采取必要的行动，袭扰后勤，破坏生产，最终将敌人淹没在人民战争的汪洋大海之中！"
