--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -125,7 +125,7 @@ COX_LOSHIDU_A: "议案预期落实度"
 COX_LOSHIDU_B: "该议案不需要落实度"
 
 
-COX_huabei_dongbeifangananniu_tt: "§Y通过对解放区合理地下达议案，对巩固我们的政权和推进战线都将大有裨益。§!"
+COX_huabei_dongbeifangananniu_tt: "§Y通过对§V解放区§!合理地下达£yiannn §m议案§!，对§G巩固我们的政权§!和§G推进战线§!都将大有裨益。§!"
 
 
 
