将剿匪替换为了来自哈萨克的指战员

--- a/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
@@ -46,7 +46,7 @@
   new_red_army: "新工农红军"
   early_industrialization: "复苏中的新疆工业"
   pay_for_the_machines: "向布里亚特付款"
-  jiaofei: "在哈萨克斯坦的剿匪行动"
+  jiaofei: "来自哈萨克的指战员"
   Transform_the_old_army: "改造旧军队"
   COX_militia_dynamic_modifiers: "民兵作战能力"
   #three_shifts_military_production: "三班倒军工生产"
