添加了常乾坤的名称本地化

--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -36,6 +36,9 @@
   Kim_Chaek: "金策"
   Anti_Communist_Conference: "新疆反共联军会议"
   Jiang_Jing_Guo: "蒋经国"
+  COX_Su_yu: "粟裕"
+  COX_Han_Xianchu: "韩先楚"
+  COX_Chang_Qiankun: "常乾坤"
 
 
 #西北局
