联合政府本地化

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -69,7 +69,7 @@
  COX_Chen_Yi_for_desc:0 "§Y外交部长\n£xibeisuqu §x中国共产党§!§Y籍§!\n--------------\n"
  COX_Song_Qingling_for_desc: "§Y外交部长\n£mingewei §!§P中国国民党革命委员会§!§Y籍§!\n--------------\n"
  COX_Song_Ziwen_for_desc: "§Y外交部长\n£guomindang §z中国国民党§!§Y籍§!\n--------------\n"
- COX_Mao_Anying_hog_desc: "§Y政府首脑\n£xibeisuqu §x中国共产党§!§Y籍§!\n--------------\n"
+ COX_Mao_Anying_2_hog_desc: "§Y政府首脑\n£xibeisuqu §x中国共产党§!§Y籍§!\n--------------\n"
  COX_Jiang_Jingguo_hog_desc:0 "§Y政府首脑\n£guomindang §!§z中国国民党§!§Y籍§!\n--------------\n"
  LFBUG.1.t: "南京谈判"
  LFBUG.1.desc: ""
@@ -81,4 +81,3 @@
  LFBUG.2.a: "打出真正的青天白日旗！"
  LFBUG.2.b: "象征祖国母亲的黄河、长江和珠江旗！"
  LFBUG.2.c: "联合政府的旗帜高高飘扬"
- LFBUG.3.t: "南京谈判"
