联合政府本地化

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -38,8 +38,8 @@
  COX_opposite: "各执一词的联合"
  COX_division: "割裂的经济状况"
  COX_National_Assembly: "国民大会"
- COX_union_despotism_party: "中华民国联合政府"
- COX_union_despotism_party_long: "中华民国联合政府"
+ COX_union_despotism_party: "联合政府"
+ COX_union_despotism_party_long: "联合政府"
  COX_union_conservatism_party: "国民党"
  COX_union_conservatism_party_long: "中国国民党"
  COX_union_liberal_conservatism_party: "国家社会党"
