--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -104,7 +104,7 @@
   LFB_COX_nc.16.a:"中国万岁，自由万岁！"
   ##决议
   COX_Liberation_of_Lanzhou:0 "解放兰州"
-  COX_Liberation_of_Lanzhou_desc:0 "\n\n\n\n\n\n§C起来，不愿做奴隶的人们！§!当西南的护国军冲进南京的城门之时，§e日寇§!便已不得不凝神谛听中华民族追求自由的怒吼。\n\n可以预见的是，日寇即将对中华大地掀起一场血腥的，旷日持久的战争，在这种情况下，唯有§D整个中华民族§!的联合才能御敌求自由。现在便是向日寇宣战的最佳时机，尽管我们在第一次夺取兰州时遭遇了挫折，但同时也取得了一定成果：日军在我们的打击之下被迫收缩，兰州城外四处活跃着§C抗日游击队§!。为了全中华民族的自由，我们将第一次与§w武装到牙齿§!的日军正面对峙。\n\n如果我们能够夺下兰州，即可有效分散我们的盟友在其他区域的压力，相信§V全中国乃至整个东亚§!一旦联合起来，我们便能够看见§M自由的曙光。§!"
+  COX_Liberation_of_Lanzhou_desc:0 "\n\n\n\n\n\n§C起来，不愿做奴隶的人们！§!当西南的护国军冲进长沙的城门之时，§e日寇§!便已不得不凝神谛听中华民族追求自由的怒吼。\n\n可以预见的是，日寇即将对中华大地掀起一场血腥的，旷日持久的战争，在这种情况下，唯有§D整个中华民族§!的联合才能御敌求自由。现在便是向日寇宣战的最佳时机，尽管我们在第一次夺取兰州时遭遇了挫折，但同时也取得了一定成果：日军在我们的打击之下被迫收缩，兰州城外四处活跃着§C抗日游击队§!。为了全中华民族的自由，我们将第一次与§w武装到牙齿§!的日军正面对峙。\n\n如果我们能够夺下兰州，即可有效分散我们的盟友在其他区域的压力，相信§V全中国乃至整个东亚§!一旦联合起来，我们便能够看见§M自由的曙光。§!"
   COX_Liberation_of_Lanzhou_countdown:0 "机不可失…" 
   COX_Liberation_of_Lanzhou_countdown_desc:0 "护国军在西南的战术胜利打乱了日军的阵脚，驻扎兰州的西北方面军开始紧急调动。这产生了一个稍纵即逝的机会，我们必须尽快做好准备，发动进攻。" 
   COX_Liberation_of_Lanzhou_invaded_Jap:0 "…时不再来"
@@ -134,4 +134,9 @@
   COX_rebuild_Lanzhou_industry:0"重建兰州工业"
   COX_rebuild_Lanzhou_industry_tt:0"这将增加我们对两地区的整合！"
 
+  #蒙古
+  COX_NC_MEN_revolution_desc:0"\n\n\n\n\n\n日本对亚洲各国压迫的形式迥异，但残虐程度却有过之而无不及。十年前，在蒙古高原西侧，生性自由的当地人民曾掀起过规模浩大的抵抗；但彼时的日寇正值如日中天，而蒙古人民军除了图瓦的俄罗斯友军之外别无其他增援。在那时，蒙人阵几乎被完全歼灭，但即便如此，草原上的抵抗却从未终止。人民军的残部在边陲之地一边放牧牛羊，一边袭扰敌军后方，一度给日寇造成了不小的压力；但随时间推移，日军逐渐巩固了防御，在他们直升机部队日夜不停的巡逻下，蒙人阵的活动范围也被压制在了边境的贫瘠之地。\n\n现如今，随着中原战端再起，日军的注意力也从蒙古转移，这给了我们蒙古同志们一个宝贵的机会。尽管我们的大部队难以直接参与在蒙古草原的战斗，我们仍然可以尽力协助蒙古本土的同志，他们将开辟另一条战线，牵制伪政权的兵力，并成为我们北方战线上珍贵的盟友。\n\n由于地势险峻，交通不便，我们并无法获取有关当地局势的详细信息；尽管如此，我们还是通过零散的渠道拼凑出现状的概况：\n\n\n蒙人阵现在[Get_LFB_NC_MEN_state]"
+  LFB_NC_MEN_weak:0"§R尚未从战败的阴影中走出§!，倘若革命现在爆发，他们仓促组建的部队将难以有效对抗伪蒙政权。"
+  LFB_NC_MEN_mid:0"§Y正枕⼽待旦，厉兵秣马§!，足以在革命爆发后向伪蒙政权发动凌厉的攻势。"
+  LFB_NC_MEN_strong:0"§G为即将到来的革命做出了万全准备§!，他们将会摧枯拉朽地给予伪蒙政权沉重打击"
   
