华北gui议案选择

--- a/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_huabei_attack_GUI_l_simp_chinese.yml
@@ -144,7 +144,7 @@ COX_huabei_huabei_special_13: "解放满洲"
 
 COX_daily_1: "渗透突袭"
 COX_daily_1_desc: "议案预期效果:获得民族精神“端起猎枪打豺狼”§G+20%§!突破,持续§Y30日§!"
-COX_daily_2: "为革命而生产！"
+COX_daily_2: "为革命而生产"
 COX_daily_21_desc: "议案预期效果:§G+5%§!工厂产出"
 COX_daily_22_desc: "议案预期效果:§G+10%§!工厂产出,每日政治点数消耗§R+0.2§!"
 COX_daily_23_desc: "议案预期效果:§G+10%§!工厂产出,§G+10%§!生产效率保持,每日政治点数消耗§R+0.2§!,每周稳定度§R-0.2%§!"
