--- a/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
@@ -198,11 +198,17 @@
  MEN_paternalism_party:0 "内蒙古人民革命党“喀喇沁派”"
  MEN_socialist_party:0 "内蒙古人民革命党“达斡尔派”"
  MEN_communist_party:0 "蒙古人民阵线"
- MEA_socialist_party:0 "内蒙古人民革命党“达斡尔派”"
- MEA_communist_party:0 "蒙古人民阵线"
-MEN_zedengbaer:0 "尤睦佳·泽登巴尔"
-MEN_batedaoerji:0 "巴特·道尔吉"
-MEN_zhamiyang:0 "扎米扬·勒哈格瓦苏伦"
-MEN_gonggeer:0 "沙格达林·贡戈尔"
-MEA_wulanbatuo:0 "乌兰巴托"
-VICTORY_POINTS_4999:0 "康定"
+ MEN_zedengbaer:0 "尤睦佳·泽登巴尔"
+ MEN_batedaoerji:0 "巴特·道尔吉"
+ MEN_zhamiyang:0 "扎米扬·勒哈格瓦苏伦"
+ MEN_gonggeer:0 "沙格达林·贡戈尔"
+ MEA_wulanbatuo:0 "乌兰巴托"
+ VICTORY_POINTS_4999:0 "康定"
+
+ 
+ MEN_attack_idea_3:0 "同仇敌忾"
+ MEN_attack_idea_3_desc:0 "50年代中期的惨败，给残破的蒙古人民军蒙上了挥之不散的阴霾；而60年代伊始的第二次俄罗斯大动乱，则迫使仍在积蓄力量的人民军离开图瓦的驻地，返回西蒙古。\n\n尽管在最近十余年间，蒙古人民军屡遭失败，在多地辗转之中，最早的起义者早已十不存一，但在中国与远东同志的支援下，人民军得以迅速扩编。如今的蒙古人民军由风尘仆仆的老兵与满腔热血的年轻人组成，他们的装备或许老旧，但没人能质疑他们多年来积累的作战经验与保家卫国的决心。\n\n§Y“乌鸦活千年也不会有白发，事业过万年也不会衰朽。”§!"
+ MEN_attack_idea_2:0 "待时而发"
+ MEN_attack_idea_2_desc:0 "50年代中期的惨败，给残破的蒙古人民军蒙上了挥之不散的阴霾；而60年代伊始的第二次俄罗斯大动乱，则迫使仍在积蓄力量的人民军离开图瓦的驻地，返回西蒙古。\n\n尽管在最近十余年间，蒙古人民军屡遭失败，在多地辗转之中，最早的起义者早已十不存一，在中国同志的支援下，人民军暂时恢复了实力。虽不及他们的高峰，但如今的蒙古人民军仍恢复了建制，作为一支小而精的部队，他们信心十足，向乌兰巴托进发。\n\n§Y“乌鸦活千年也不会有白发，事业过万年也不会衰朽。”§!"
+ MEN_attack_idea_1:0 "仓促作战"
+ MEN_attack_idea_1_desc:0 "50年代中期的惨败，给残破的蒙古人民军蒙上了挥之不散的阴霾；而60年代伊始的第二次俄罗斯大动乱，则迫使仍在积蓄力量的人民军离开图瓦的驻地，返回西蒙古。\n\n在最近十余年间，蒙古人民军屡遭失败，在多地辗转之中，最早的起义者早已十不存一。此时的人民军远未从之前的创伤中恢复，仓促作战间，他们能依靠的只有自己的袍泽。\n\n§Y“乌鸦活千年也不会有白发，事业过万年也不会衰朽。”§!"
