补全了南京谈判的事件本地化

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -88,19 +88,19 @@
  COX_Liu_Shaoqi_3_eco_desc:0 "§Y财政部长\n新民主主义§!\n--------------\n"
  COX_Chen_Yi_2_for_desc:0 "§Y外交部长\n毛泽东思想§!\n--------------\n"
  COX_Zhou_Enlai_hog_desc:0 "§Y国务院总理\n毛泽东思想§!\n--------------\n"
- LFBUG.1.t: "南京谈判（一）"
+ LFBUG.1.t: "南京谈判（七）"
  LFBUG.1.desc: "在真正核心的联合方案敲定之后，会议室内的气氛都轻松了许多——不管怎么说，不至于兵戎相见了，双方都这样想着。在大方向确定后，他们就不必这么剑拔弩张了。\n\n“那么诸位代表先生，我们首先是要确定新生中国的国名——”\n\n是尊重传统，还是做出改变？\n\n经过激烈的争辩后，代表们最终通过了……"
  LFBUG.1.a: "中华民国！"
  LFBUG.1.b: "中华民主共和国！"
  LFBUG.1.c: "中华共和国！"
- LFBUG.2.t: "南京谈判（二）"
+ LFBUG.2.t: "南京谈判（八）"
  LFBUG.2.desc: "确定新国名后，会议室中的气氛稍显缓和。但确定新国旗的问题又让他们陷入了新的思考中。会议室内，代表们围坐在长桌旁，各自心中都有着不同的构想。经过热烈而又细致的讨论之后，大部分代表们决定选择："
  LFBUG.2.a: "联合政府的旗帜高高飘扬！"
  LFBUG.2.b: "象征祖国母亲的黄河、长江和珠江旗！"
  LFBUG.2.c: "打出真正的青天白日旗！"
- LFBUG.51.t: "南京谈判（三）"
+ LFBUG.51.t: "南京谈判（九）"
  LFBUG.51.desc: "新中国的门面情况已敲定，那么接下来该谈谈更实质的东西了。"
- LFBUG.51.a: ""
+ LFBUG.51.a: "首先是军事委员会的问题……"
  LFBUG_tt_5: "§Y中庸之道，或可存续，当兼顾§x左§!§z右§!，若厚此薄彼，其后果§e不堪设想……§!"
  LFBUG.5.t: "军事委员会设立："
  LFBUG.5.desc: "首先是最重要的军事委员会，会议决定：在军事委员会正式成立一个月后，中国境内所有军队的指挥权都将交予军委会。\n\n按照之前的决定，安全部长由国共两党和护国军军事委员会各推荐一名推荐人选。"
@@ -118,18 +118,33 @@
  LFBUG.7.b: "护国军代表宋庆龄。"
  LFBUG.7.c: "国民党代表宋子文。"
  LFBUG.8.t: "选举总统与行政院院长："
+ LFBUG.8.desc: "最后，大会选举了[From.GetNameDef]联合政府第一任大总统，而行政院院长将由另一党派的人士担任。作为两股针锋相对的势力，共产党人与国民党人都屏息以待——"
  LFBUG.8.a: "由毛岸英担任总统，蒋经国出任行政院院长。"
  LFBUG.8.b: "由孙科担任总统，周恩来出任行政院院长。"
  LFBUG.9.t: "谈判结束"
- LFBUG.9.a: "现在，我们能做的只有等待……"
+ LFBUG.9.desc: "南京谈判终于落下帷幕，现在，全国人民都在屏息凝神地等待着谈判的结果……"
+ LFBUG.9.a: "希望我们做出了正确的选择。"
  LFBUG_tt_9: "尘埃落定……"
- LFBUG.10.t: "皆大欢喜"
+ LFBUG.10.t: "南京谈判（终） "
+ LFBUG.10.desc: "国共两党于南京之联合谈判，已于昨日圆满落幕。两党之领导人及与会其他代表，皆赞同孙文先生之三民主义纲要，并愿以三民主义为基础，同心合力，共建我中华人民之理想国家。\n\n兹发布公告，内容如下：\n一、自今日起，两党共建联合政府，由两党共同执政，国号定为[From.GetNameDef]，同时恢复南京为国都之地位。\n\n二、两党联合组建军事委员会，军队悉纳于委员会之管理之下，选举军事委员以分管军事事务，委员由两党共同选举，且两党所占席位不得有差异。\n\n三、两党携手同心，营造为民解忧之清朗政府，於全国范围内厉行改革，裁撤一切冗余官职；并于全国范围内保障民生，支贫扶贫；丈量土地、平均地权、节制资本，务求实现民生主义之不懈努力。\n\n四、尤为重要者，设立行政会议，于中央设立国民大会，管理一切国是；其次，于各行政区划设立地方大会，由各地人民统一选举议会之参议员，凡成年国民皆有选举及被选举之权利。凡我[From.GetNameDef]国民，不论民族，不问籍贯，不分性别，一律平等无异。\n\n愿全国人民、愿两党党员团结一致，携手并进，共创中华之美好未来。愿我中华民族于风雨中再展辉煌，迈向繁荣昌盛之新篇章。"
+ LFBUG.10.a: "中华民族万岁！"
+ LFBUG.11.t: "权宜之计"
+ LFBUG.11.desc: "飞机慢降落在乌鲁木齐的跑道上，衬得跑道上的人很着急。\n\n而当毛岸英下了飞机，回到他在新疆的办公地点之后，他发现这里早就被大家包围了。\n\n张闻天在最前面盯着他，老眼里尽是血丝，\n\n“你为什么答应他们？你忘了当年他们是怎么背叛我们的吗？民国十六年，四一二清党啊！黄浦江都被染成血色的！党的多少同志被他们杀害！就算是你父亲！”张闻天指着毛岸英的鼻子：“就算是你父亲！也差点被他们杀了！”\n\n周恩来两步上前，把张闻天拦在毛岸英身前：“老张，老张，冷静一下。”\n\n“毛岸英！你今天最好解释清楚！否则！我只好召开西北政治局会议罢免你的主席地位了！”\n\n“张老，您太激动了，抗日的时候，我们又不是没有和他们合作过…”\n\n“可是现在日本人已经滚蛋了！他们现在元气大伤，几年内都不会回来！我们完全可以消灭他们！报仇雪恨！”\n\n“张老，难道国民党不是我们的同胞吗？如果日本人趁着我们解放中国的时候冒险怎么办？如果我们真的再一次打输了怎么办？中国已经落后太久了，如果她真的永远赶不上了呢？我能理解您的心情，可是现在的中国需要团结和喘息，过去的中国不也是因为各路军阀不团结才被日本乘虚而入吗？”\n\n“毛岸英！你不能把旧军阀和现在的人民军队相比！你看吧！如果说以后国民党再制造一个四一二！你是要负责任的！”"
+ LFBUG.11.a: "“我希望这是最后一次国共合作！”"
+ LFBUG.12.t: "胜券在握？"
+ LFBUG.12.desc: "“蒋副总统，真的就这样让共党加入联合政府吗？那群共党无孔不入，不过几年，我们就会被渗透得和筛子一样的！”\n\n “你怕什么，我把你提到军事统计局局长的职位就是为了让你好好监视军队的。我问问你，哪个党一开始不是清廉的？后来党员多了，自然也就难管了。只要以后共产党和我们接触多了，他们也会习惯这种灯红酒绿的日子。到时候他们和我们还有什么区别？”\n\n 尽管副总统说出这样的话，局长还是难掩他的恐惧，作为党内的后辈。他已经听了不少遗老的埋怨。他们不止一次地在局内的会议上大谈共党的威胁。\n\n “你放心，我当初在德国学习的时候就研究过这个问题。结论是共产党只擅长山村游击战。一旦到了议会里面，他们就不行了。德国共产党以前起义的时候，如烈火燎原，但是后来纳粹党掌权之后，德共便被希特勒打压至销声匿迹。在印度，就前几年，印度的共产党就因为政见不合而分裂为至少三个独立的政党，尽管他们之间还有联系，但是已经不足以影响国大党的统治地位。所以，国民大会将会是我们最熟悉的战场。因为，在这个世界上，”"
+ LFBUG.12.a: "“还从来没有过一个共产党，能通过议会成为一个大国的执政党！”"
+ LFBUG_tt_12: "现在，南京条约已经签署，中国人民终于获得了暂时的和平，可中国的未来却无人可以给出答案。"
  LFBUG.101.t: "不识好歹"
  LFBUG.101.desc: "“……赤匪不顾大局，不识大体……”（占位）"
  LFBUG.101.a: "人所恶痛者，赤匪也！"
+ LFBUG.102.t: "烽烟再起"
+ LFBUG.102.a: "反击的时候到了！"
  LFBUG.201.t: "欺人太甚"
  LFBUG.201.desc: "“……国民党反动派排挤民主进步人士，其野心昭然若揭……”（占位）"
  LFBUG.201.a: "抛弃幻想，准备斗争！"
+ LFBUG.202.t: "烽烟再起"
+ LFBUG.202.a: "先下手为强！"
  LFBUG.301.t: "革命得胜"
  LFBUG.301.a: "人民万岁！"
  LFBUG.302.t: "结束动员戡乱状态"
@@ -140,7 +155,11 @@
  LFBUG.1001.b: "此乃帝国之耻。"
  LFBUG.1001.c: "一个新生国家的响亮啼哭。"
  LFBUG.1002.t: "[Get_newspaper_header]第二次国共内战"
+ LFBUG.1002.desc: "自日本于停战协议上签字起，中国各界的目光便都聚焦在了南京，期待着国共双方能通过谈判消除分歧、和平统一，但两党间难以弥合的根本性矛盾似乎昭示着这一期望注定落空。\n\n而今日凌晨，枪炮的轰鸣声彻底打破了和平的幻象。中国国民党和中国共产党的紧张对峙终于演变成了撕裂整个中国的全面战争，脆弱的统一战线就此寿终正寝。\n\n现在战争机器已经开动，整个中国又将再度陷入血潮之中。没有人知道这场兄弟之争将会鹿死谁手，但可以预见的是：这场战争将决定中国的现在和将来。"
  LFBUG.1002.a: "一定要把解放的旗帜插满全国！"
  LFBUG.1002.b: "吾国之患，不在外邦，而在萧墙之内。"
  LFBUG.1002.c: "知其貌合心离，今果自相鱼肉。"
  LFBUG.1002.d: "古国再陷战火。"
+ SE_superevent_cpc_kmt_civil_war:0 "第二次国共内战"
+ SE_superevent_cpc_kmt_civil_war_A:0 "神州陆沉"
+ SE_superevent_cpc_kmt_civil_war_D:0 "国虽大,好战必亡。\n- 司马穰苴"
