修改了几个错别字

--- a/localisation/simp_chinese/COX_nanking_negotiationgs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_nanking_negotiationgs_l_simp_chinese.yml
@@ -24,7 +24,7 @@
  LFBNN.7.t: "山雨已来"
  LFBNN.7.desc: "飞机慢慢降落在乌鲁木齐的跑道上，没有人来迎接它。毛岸英如常来到他在乌鲁木齐的办公室，而屋里屋外都是忙来忙去的人，很少人注意到他回来了，就算是那些注意到的人，也只是敬个礼，问声好。因为他们没有时间关心他一路上的趣事。\n\n 简单审理了这几天的公务后。他换了便服，来到乌鲁木齐政府大楼的门口的台阶上，点燃了一支烟。\n\n 看着眼前人来人往的大街，毛岸英能感觉到欣慰。\n\n 但是他真的有能力保护好眼前的一切吗？\n\n 还是说，他已经错失了命运给他安排好的机会，注定走到毁灭的道路上去呢？\n\n 如果是父亲面临同样的问题，他也会做出同样的选择吧。\n\n 正在他思考的时候，一声惊雷打破了他的思绪，随后下起了大雨。乌鲁木齐是不经常下雨的，但是这一次下得很大。\n\n 倾盆的大雨让街上的商贩匆匆盖住刚刚还在售卖的瓜果，街上的行人也赶紧找好躲雨的地方。人群中，一位五十多岁的大爷看到毛岸英在抽烟，就想过来蹭一根。\n\n “兄弟，有烟吗？”\n\n 毛岸英盯着他，在确认了他看起来没有恶意之后，拿了一根烟给他，还把打火机也递了过去。\n\n “没事，我自己有。”\n\n 身上有火而不带烟，一看就是经常蹭烟的人。\n\n “你看看这雨，下个没完，真糟心，”那人指指面前的大雨：“一下大雨就什么也干不了，咱们也没有办法。”\n\n “怎么会没有办法呢？”毛岸英摇摇头：“如果是不得不做的事情，就打伞穿雨衣去做，再大的雨也要做好，如果没有要紧的事，还可以读书看报，充实自己。再说了，狂风暴雨不过是一时的，太阳总会出来的。”\n\n 说完，毛岸英起身离开，到大楼里找到了他的秘书。\n\n “陈宽，通知军事委员会，我十分钟后要过去。”"
  LFBNN.7.a: "这一次，我们不会再重蹈四一二的覆辙。"
- LFBNN_tt_7: "与§z国民党§!§F的不和意味着第二次内战的爆发已经在倒计时。而这一次，将会决定中国的§x命§!§z运§!。"
+ LFBNN_tt_7: "与§z国民党§!§F的不和意味着第二次内战的爆发已经在倒计时。而这一战，将会决定中国的§x命§!§z运§!。"
  LFBNNsub.1.t: "十五从军征（一）"
  LFBNNsub.1.desc: "老赵！嘿嘿嘿，好久不见，自从咱们光复武汉之后就分开了…\n\n对对对，我是那个国民革命军的，害，多久不见了，你怎么还是连长，我都当上团长了。\n\n打完仗你要去做什么？回家种地？兄弟，你是我见过的最有能力的护国军军官。当时那一群高宗武的狗汉奸冲上来的时候，你临危不惧呀！不光有勇气，在那种情况下的指挥也井井有条。还有那次你在湖南动员农民的时候，三言两句就把他们说得热血澎湃…我知道你没读过书，没读过书都这样，读了书那还了得！\n\n像你这样的人在国军里太难找了。像你这样的人，就应该继续保卫中国，回去种地实在是太可惜了。\n\n我跟你说，你要是到我们这边来，起码能当团长，甚至旅长！你放心吧，我能给你保证。是，现在日本人走了，很多人要复员了，但是你可不能回家，你想想，种地一年到头才几个钱？你还没娶媳妇吧，你家老太太，老太爷还得靠你养活，是吧？你到我们这边来，保你吃香的喝辣的，到时候高头大马，衣锦还乡，多威风！也让家里人看看你出息的样！ 共党？共党能给你几个钱？他们穷得要死，哪像咱们一样？是，是，我也听说他们的纪律好，但是光纪律好有啥用啊？他们和咱们不一样！都不让兵抢东西，长不了！\n\n谢我？欸你谢什么，这是你应得的。那就说好了，明天来一趟我们国军的这个办事处，就在陈纳德路二十一号。要不要我派车接一下？不用？好，好，明天在那见吧！"
  LFBNNsub.1.a: "难道天上真的会掉馅饼？"
