追加了内战胜利新闻

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -139,15 +139,19 @@
  LFBUG.101.desc: "“……赤匪不顾大局，不识大体……”（占位）"
  LFBUG.101.a: "人所恶痛者，赤匪也！"
  LFBUG.102.t: "烽烟再起"
+ LFBUG.102.desc: ""
  LFBUG.102.a: "反击的时候到了！"
  LFBUG.201.t: "欺人太甚"
  LFBUG.201.desc: "“……国民党反动派排挤民主进步人士，其野心昭然若揭……”（占位）"
  LFBUG.201.a: "抛弃幻想，准备斗争！"
  LFBUG.202.t: "烽烟再起"
+ LFBUG.202.desc: ""
  LFBUG.202.a: "先下手为强！"
  LFBUG.301.t: "革命得胜"
+ LFBUG.301.desc: ""
  LFBUG.301.a: "人民万岁！"
  LFBUG.302.t: "结束动员戡乱状态"
+ LFBUG.302.desc: "你的意思是，你专门搞崩了谈判，然后在内战开打以后tag到了YUN，然后帮烤馒头打赢了内战，就是为了看看有没有彩蛋？那你也挺牛逼的，我也没活整，就请你吃六个鸡蛋吧。"
  LFBUG.302.a: "三民主义一统中国。"
  LFBUG.1001.t: "[Get_newspaper_header]联合政府组建"
  LFBUG.1001.desc: "在日本败退，龙云将军去世的节骨眼上，中国最终完成了龙云将军未了的夙愿。\n\n在昨日于南京举行的新闻发布会上，中国共产党的主要领导人毛岸英与中国国民党的主要领导人蒋经国一同上台，共同宣布国共两党谈判的圆满结束，并宣布从今日起开始组建两党联合执政的政府。同时颁布了经双方拟定并审阅通过的联合政府条例。\n\n“国母”宋庆龄表示，经通过的联合政府条例详细地规定了新生中国政府的主要执政方针与执政目标，并将在今后的一段时间内充当中国的临时宪法。\n\n随着新闻发布会的召开，联合政府条例也被送往中国的各个地区，向群众公开并接受群众审阅监督。\n\n我们可以认为，随着中国联合政府条例的颁布，中国几十年来所作出的夺回自由的一切努力，都是值得的。"
@@ -163,3 +167,12 @@
  SE_superevent_cpc_kmt_civil_war:0 "第二次国共内战"
  SE_superevent_cpc_kmt_civil_war_A:0 "神州陆沉"
  SE_superevent_cpc_kmt_civil_war_D:0 "国虽大,好战必亡。\n- 司马穰苴"
+ LFBUG.1003.t: "[Get_newspaper_header]中华人民共和国成立"
+ LFBUG.1003.desc: "今日，中国大地上的枪炮声终于停息，中国共产党成为了最终赢家。\n\n在国共谈判破裂后，双方又开始了激烈的内战，中华大地饱受摧残。而就在昨天，中国共产党的主要领导人在天安门城楼之上宣布了以中国共产党为执政党的中华人民共和国的成立。\n\n在宣布新政权成立后，毛岸英等一众领导人检阅了部队，并在当天稍晚时候举办了群众庆祝游行活动。\n\n无论如何，一个自由的中国终于建立起来了。"
+ LFBUG.1003.a: "艰难缔造庆成功，五星红旗遍地红。"
+ LFBUG.1003.b: "又是共产党？"
+ LFBUG.1003.c: "让我们祝贺中国同志。"
+ LFBUG.1004.t: "[Get_newspaper_header]中国内战结束"
+ LFBUG.1004.desc: "今日，中国大地上的枪炮声终于停息，中国国民党成为了最终赢家。\n\n在国共谈判破裂后，双方又开始了激烈的内战，中华大地饱受摧残。而就在昨天，中国国民党的主要领导人在南京宣布了动员戡乱状态的结束。\n\n之后，蒋经国等一众领导人检阅了部队，并在当天稍晚时候举办了群众庆祝游行活动。\n\n无论如何，一个统一的中国终于建立起来了。"
+ LFBUG.1004.a: "不畏挫折历辛苦，换得白日照九州。"
+ LFBUG.1004.b: "天有二日。"
