--- a/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
@@ -1,10 +1,16 @@
 ﻿l_simp_chinese:
- TNO_PEACE_POPUP_FLAVOR_XIN: "腐朽统治已被颠覆，热土将生长出革命新花。"
- TNO_PEACE_POPUP_FLAVOR_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
+###结语###
  TNO_PEACE_POPUP_WAR_FREE_QIN: "[QIN.GetFlag]§i必死之人§!的尸骨淹没在漫漫黄沙之中，它§Y治下的人民§!终得解放。随着§Y[winning_country.GetNameWithFlag]§!的挺进，§V星火燎原之日，必将到来。§!"
  TNO_PEACE_POPUP_WAR_FREE_GAN: "[GAN.GetFlag]§r疯狗§!已死，通往中国腹地的大门已经敞开，§Y战争的烈火将再临于此。§!"
- TNO_PEACE_POPUP_WAR_FREE_JAP: "将士岂能服死物？残躯志敢斩金銮。"
- 
+ TNO_PEACE_POPUP_WAR_FREE_CHI: "昔日作威作福的[CHI.GetFlag]§j汉奸§!已被中国人民踩在脚下，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_FREE_GNG: "§e帝国主义§!用中国人民的血肉塑造的[GNG.GetFlag]§r畸形怪物§!已被中国人民的铁拳砸得粉碎，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_FREE_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民的尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_FREE_JAP: "[JAP.GetFlag]§e旭日§!东落，§x中华§!§z民族§!的§e百年国耻§!终得洗雪。"
+###配文###
+ TNO_PEACE_POPUP_FLAVOR_XIN: "腐朽统治已被颠覆，热土将生长出革命新花。"
+ TNO_PEACE_POPUP_FLAVOR_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
+ TNO_PEACE_POPUP_FLAVOR_CHI: "教尔作人不作人，教尔不苟竟狗苟。而今俯首尔就擒，仍自教尔分人狗。"
+ TNO_PEACE_POPUP_FLAVOR_JAP: "将士岂能服死物？残躯志敢斩金銮。"
  #以下内容来自群友“老大哥在看着你”，感谢他的贡献
  #TNO_PEACE_POPUP_FLAVOR_东突: "假若我降下一个天神，我必使他变成一个人样，我必使他们陷于自己所作的蒙蔽之中。"
  TNO_PEACE_POPUP_FLAVOR_SHX: "红缨缨大马你骑上走，妹妹送你到村口口；三年呀五载你要回家转，莫让妹妹等得愁。"
