--- a/localisation/simp_chinese/LFB_DDS_VP_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_DDS_VP_l_simp_chinese.yml
@@ -1,10 +1,10 @@
 ﻿l_simp_chinese:
  VICTORY_POINTS_10187:0 "苦盏"
  VICTORY_POINTS_10488:0 "浩罕"
- VICTORY_POINTS_10530:0 "安集延"
- VICTORY_POINTS_13262:0 "纳曼干"
+ VICTORY_POINTS_10530:0 "纳曼干"
+ VICTORY_POINTS_13262:0 "泰克雷赛"
  VICTORY_POINTS_12581:0 "巴特肯"
- VICTORY_POINTS_13256:0 "奥什"
+ VICTORY_POINTS_13256:0 "安集延"
  VICTORY_POINTS_13259:0 "贾拉拉巴德"
  VICTORY_POINTS_1919:0 "伊斯塔拉夫尚"
  VICTORY_POINTS_12239:0 "铁尔梅兹"
