--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -139,4 +139,8 @@
   LFB_NC_MEN_weak:0"§R尚未从战败的阴影中走出§!，倘若革命现在爆发，他们仓促组建的部队将难以有效对抗伪蒙政权。"
   LFB_NC_MEN_mid:0"§Y正枕⼽待旦，厉兵秣马§!，足以在革命爆发后向伪蒙政权发动凌厉的攻势。"
   LFB_NC_MEN_strong:0"§G为即将到来的革命做出了万全准备§!，他们将会摧枯拉朽地给予伪蒙政权沉重打击"
+
+  #NCC
+  NCC_xu_liang:0"徐良"
+  NCC_xu_liang_desc:0"徐良永远也不会想到，自己有一天居然能成为中华民国的真正掌权者，自从张作霖离开北京以来，中华民国的权力中心终于在一次回到了华北。自1941年以来，徐良就是改组政府中华北势力的最高代表，始终与权力中心保持着密切联系。这种联系与其说是中央给予的嘉奖，不如说是对华北派的怜悯。从那之后，往日里繁荣的北平一天天消沉下去，从旧日里权力的中心变成了华北的一个不重要的城市。“那是中国以前的首都”人们如此评论道。而南京和上海，作为新的经济政治中心慢慢吸引了越来越多的人。徐良将这一切视作对华北的抛弃。但是现在，再造民国的机会就在他眼前，他有机会将权力的中心再次回到华北。当然徐良也清楚，如果战争打输了，自己也难逃一死。不过整个共荣圈都已经全面介入了，还能有什么问题呢？"
   
