让每个复制人都拥有了自己的名字

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -61,13 +61,22 @@
  COX_National_Assembly: "国民大会"
  COX_National_Assembly_desc: "“可怖疮伤的绷带”\n--------------\n时至二十世纪末，没有人会否认——此时的中国已是个濒死的巨人，千年前的繁华早已不在；百年间的战火几乎放干了她的鲜血。当这个民族终于挣脱了束缚在身上的锁链，步履蹒跚地站立于世界民族之林时，浑身上下早已千疮百孔。外有强敌虎视眈眈，国内矛盾更日益尖锐——自由的中国顽强伫立，但汩汩鲜血正从伤口涌出，此刻，她需要的不是精细地缝合，而是粗暴的包扎。先克服失血的风险，再论其他！\n\n国民大会，便是这样一段被寄予厚望的薄纱。它残破，粗粝，因它建立在各党派的妥协，而不是某种愿景之上。尽管包扎之后，许多伤口仍渗着血；尽管许多人对它的存在颇有微词，但它仍将中国的各个部分绑在了一起，不至于四分五裂，以至于再次给邻家的豺狗可乘之机。"
  COX_Liu_Shaoqi: "刘少奇"
+ Liu_Shaoqi_2: "刘少奇"
+ Liu_Shaoqi_3: "刘少奇"
  COX_Zhang_Bojun: "章伯钧"
  COX_Fei_Xiaotong: "费孝通"
  COX_Zhang_Junmai: "张君劢"
  COX_Chen_Yi: "陈毅"
+ COX_Chen_Yi_2: "陈毅"
  COX_Zhou_Enlai: "周恩来"
  COX_Song_Ziwen: "宋子文"
- YUN_Sun_Fo: "孙科"
+ YUN_Sun_Fo_ROC: "孙科"
+ YUN_Sun_Fo_DRC: "孙科"
+ YUN_Sun_Fo_CR: "孙科"
+ Mao_Anying_ROC: "毛岸英"
+ Mao_Anying_DRC: "毛岸英"
+ Mao_Anying_CR: "毛岸英"
+ Mao_Anying_2: "毛岸英"
  COX_Provisional_Peoples_Goverment: "临时人民政府"
  COX_Ye_Jianying_sec_desc:0 "§Y安全部长\n£xibeisuqu §x中国共产党§!籍\n“久经考验”§!\n--------------\n从土地革命战争到第一次抗日战争，再到长达二十年的西南革命战争，最后是第二次抗日战争……叶剑英便是为数不多存活至今，并且还在坚持战斗的革命者。如若没有他的指挥才干，在数次决定性失败后，西南中央的生存空间或许将更加逼仄；如若不是他指挥取得了“谅山大捷”，日军或许早已通过越南边境长驱直入……一身功勋傍身，令他在中国解放后，被推举为新中国的首任安全部长。\n\n在军事建设方面，基于在西南的经验，党总结出了一套根植于群众的，富有韧性与生命力的军事策略——“持久人民战争”——以群众运动为核心，巩固敌后游击作战，撬动敌我平衡后，通过坚决的正面作战一举将敌人击溃。虽然不是所有的中国军队都如此强调意识形态的作用，但这位共产党部长无疑会想方设法地将政治工作普及到每一名士兵心中，唯有如此，新生的共和国才能真正的立于不败之地。"
  COX_Zhang_Chong_sec_desc:0 "§Y安全部长\n£huguojun §e护国军§!籍\n“坚定的护国军将领”§!\n--------------\n张冲胆大、敏捷、机智，自幼身边人就对他赞不绝口。张冲于1901年生于云南的一个村镇，在辛亥革命后的混乱局势中，他不得不落草为寇。后来他逐步消灭周边悍匪，队伍发展到了六百余人，广受民众爱戴。他曾率部定期袭击滇越铁路，令法国人怒不可遏，这样的举动吸引了省长唐继尧的关注，他多次派兵围剿并俘虏了张冲。张冲接受了招安，在军中谋得一个职位。在军阀混战中，唐继尧在1927年被政变推翻，张冲也由于在其中联合龙云反对胡若愚而在年仅26岁时就被任命为第5师师长。\n\n抗战期间，滇军编成第60军，张冲在其中任第184师师长。他曾参与过著名的台儿庄战役，因此在国军中声名鹊起，最终在武汉战役中被委任为第三路军军长。当中国沦陷、日本高举南京政权的旗帜向各地进军时，张冲仍在继续抵抗；哪怕云南省已经沦陷、他也被迫和宋希濂麾下的军团撤至缅甸时，张冲也仍在继续抵抗。\n\n而今，解放的战旗高高扬起，人民再次向他发出了召唤。他们希望他回来，与中华儿女并肩作战，反抗压迫者。他将回应这一召唤，满足人民的愿望，或者在征途中壮烈牺牲。\n\n§u而今海内虽定，然四方未平。无论中国将迈向怎样的未来，护国军会始终枪口朝外，时刻警惕！§!"
