各项BUG修复/内容完善 -为IF线晋陕/蒙古的决议添加了本地化 -更正了华北GUI脚本本地化中的缩进 -修复了早期工业发展GUI中某些按键无法按预期点击的问题 -更改了第二次抗日战争的战争结语

--- a/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
@@ -238,7 +238,7 @@
  XBJ_YUN_tatakai:0 "燃气来了！"
  XBJ_COX_MING_LING:0 "§Y七日之后，发起进攻§!"
  XBJ_COX_JINGONG_END1:0 "§G请在gui页面点击§!§Y“兰州”§!§G派遣侦察兵§!"
- XBJ_COX_JINGONG_END2:0 "§G呃.......非常感谢你攻取了兰州，不过这显然超出了我们的预料，因为我们根本没打算让小毛在这会就打下兰州，可能你会坏档。如果你是真正凭着自己惊人的指挥才能打下的兰州，请允许我在这里叫你一声大哥，并请向我们反馈；但如果你是开了控制台，那坏档的原因就真的是开控制台开的了§!"
+ XBJ_COX_JINGONG_END2:0 "§G呃......非常感谢你攻取了兰州，不过这显然超出了我们的预料，因为我们根本没打算让小毛在这会就打下兰州，可能你会坏档。如果你是真正凭着自己惊人的指挥才能打下的兰州，请允许我在这里叫你一声大哥，并请向我们反馈；但如果你是开了控制台，那坏档的原因就真的是开控制台开的了§!"
  XBJ_COX_shentou_END2:0 "§G大风止息，壮士扼腕......§!"
  XBJ_COX_shentou_END1:0 "§G下次兰州城下，胜负尤未可分.....§!"
  XBJ_northwest_crisis_invaded_Jap_los:0 "§Y进攻受挫§!"
