--- a/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
@@ -10,7 +10,7 @@
  TNO_PEACE_POPUP_FLAVOR_XIN: "腐朽统治已被颠覆，热土将生长出革命新花。"
  TNO_PEACE_POPUP_FLAVOR_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
  TNO_PEACE_POPUP_FLAVOR_CHI: "教尔作人不作人，教尔不苟竟狗苟。而今俯首尔就擒，仍自教尔分人狗。"
- TNO_PEACE_POPUP_FLAVOR_JAP: "将士岂能服死物？残躯志敢斩金銮。"
+ TNO_PEACE_POPUP_FLAVOR_JAP: "翻山倒海寻常事，今日愚公天下多。"
  #以下内容来自群友“老大哥在看着你”，感谢他的贡献
  #TNO_PEACE_POPUP_FLAVOR_东突: "假若我降下一个天神，我必使他变成一个人样，我必使他们陷于自己所作的蒙蔽之中。"
  TNO_PEACE_POPUP_FLAVOR_SHX: "红缨缨大马你骑上走，妹妹送你到村口口；三年呀五载你要回家转，莫让妹妹等得愁。"
