国策树修正 -为IF线国策树的战胜部分添加了显示限制 -修正了部分tooltip

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -134,7 +134,7 @@
   COX_rebuild_Lanzhou_industry:0"重建兰州工业"
   COX_rebuild_Lanzhou_industry_tt:0"这将增加我们对两地区的整合！"
   COX_help_army_anti_trigger_tt:0"已经与马家军残部建立了联系"
-  COX_Anti_sweep_trigger_tt:0"已经对当地游击队实施了援助
+  COX_Anti_sweep_trigger_tt:0"已经对当地游击队实施了援助"
   COX_lanzhou_core_trigger_tt:0"整合度达到§G100§!"
   COX_lanzhou_core_effect_tt:0"我们将会完成对兰州的整合！"
 
@@ -175,6 +175,11 @@
   COX_MEN_logistics_support:0"后勤支援"
   COX_MEN_logistics_support_avaliable_tt:0"这一决议还未执行过五次"
   COX_MEN_logistics_support_tt:0"蒙人阵§Y做出准备的速率§!将会提升"
+
+  #IF线战后内容
+  COX_Nanjing_Negotiations_tt:0"§z南京§!§x谈判§!将会决定中国的命运！"
+  COX_tibet_problem:0"藏区问题"
+  COX_tibet_problem_desc:0"西藏虽获解放，但仍然问题重重：在下层，万恶的农奴制仍在荼毒人民；在上层，少数不服西藏当局的权贵人士正蠢蠢欲动；向南边看去，自由印度政府态度尚不明确，而印度共和国对西藏产生了浓厚的兴趣。我们必须做出行动，在未来可能的骚乱甚至危机出现前，建立起对藏区的有效管辖，或者，更进一步——对藏区进行民主改革，砸碎那祸害千年的、吃人不吐骨头的农奴制！"
 
   #NCC
   NCC_xu_liang:0"徐良"
