修正了错别字
修正了错别字

--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -140,7 +140,7 @@
 	COX_Normalization_Of_Work_Style_Rectification_desc: "打铁还需自身硬。一个共产党，一支先锋队，要想要为人民谋平等与解放，就需要不断地进行自我反省与自我净化。自从根据地建立以来，党的党员规模迅速扩张，但在新鲜血液中不可避免地存在路线跑偏者、思想歪曲者、作风不端者，运动式的整风运动难以长久地确保党在思想与作风上的双重纯洁性，需要我们持之以恒地对党员进行教育、让群众监督党员的作风。当然，各级领导干部们——包括毛岸英同志本人在内，都要为党员们做出表率，主动接受全体人民的监督，虚心接受建议和批评。"
 	COX_Xinjiang_Industry_Rehabilitation: "新疆工业复苏"
 	COX_Xinjiang_Industry_Rehabilitation_desc: "我们对工业设备的更新普及与工业知识的扫盲教育使得我们的工业进入了快速发展的时期。在盛世才时期，新疆的工业基本处于停滞状态，部分日用品甚至还要向共荣圈进口，而生产重工业产品更是天方夜谭。这种情况将会一去不复返了——新疆，它接下来的几年内将成为整个中国的快速发展的全新的工业基地！"
-	COX_Check_What_We_Missed: "查阙补漏"
+	COX_Check_What_We_Missed: "查缺补漏"
 	COX_Check_What_We_Missed_desc: "我们的工作大抵上是胜利推进了，但这是否意味着我们每一步走的都是完美无缺的，没有任何遗憾的呢？想来并不是，没有什么东西是一下子就能十全十美的，我们必须回过头来审视我们的政策和行动，找到不足的地方加以改正。不管是我们党还是党员，都必须要好好的审视自己之前所做的工作。查漏补缺。"
 	COX_Militia_Normalized: "组建常备民兵"
 	COX_Militia_Normalized_desc: "我们在土地革命时期成立的赤卫队民兵曾在应对还乡团，维持基层秩序上发挥了极大的重要，如今土地革命胜利结束，我们应该将这些已经组织起来的赤卫队民兵组织正规化，常态化，在农闲的时候组织农民兄弟们进行训练，建立一个完善的赤卫队民兵体系。这不仅可以有效的增强我们的兵源动员体系，还可以让赤卫队弥补一些我们正规红军的缺点，作为辅助部队活动。"
