早期工业GUI修复 -早期工业GUI现在应当彻底按照预期运转了 -IF线西藏内容本地化（内容还没做）

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -180,6 +180,10 @@
   COX_Nanjing_Negotiations_tt:0"§z南京§!§x谈判§!将会决定中国的命运！"
   COX_tibet_problem:0"藏区问题"
   COX_tibet_problem_desc:0"西藏虽获解放，但仍然问题重重：在下层，万恶的农奴制仍在荼毒人民；在上层，少数不服西藏当局的权贵人士正蠢蠢欲动；向南边看去，自由印度政府态度尚不明确，而印度共和国对西藏产生了浓厚的兴趣。我们必须做出行动，在未来可能的骚乱甚至危机出现前，建立起对藏区的有效管辖，或者，更进一步——对藏区进行民主改革，砸碎那祸害千年的、吃人不吐骨头的农奴制！"
+  t:0"和平解放西藏！"
+  d:0"或许是因为我方在二次抗日战争中的惊人表现，在经过几轮谈判之后，西藏当局在玉树宣布：西藏将以自治区的形式回归我国统治。\n\n自此，中国大陆上最后一个受日本影响的区域得到了解放。"
+  a:0"中国，统一而不可分割！"
+
 
   #NCC
   NCC_xu_liang:0"徐良"
