为缺失本地化的文本创建了占位本地化条目

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -54,6 +54,21 @@
   COX_GAN_war_started_tt:0"我们已经开始了对兰州的入侵"
   COX_GAN_war_ended_tt:0"我们对兰州的入侵已经结束"
   ##需要填充
+  LFB_COX_wi.1.t:0""
+  LFB_COX_wi.1.d:0""
+  LFB_COX_wi.1.a:0""
+  LFB_COX_wi.2.t:0""
+  LFB_COX_wi.2.d:0""
+  LFB_COX_wi.2.a:0""
+  LFB_COX_wi.3.t:0""
+  LFB_COX_wi.3.d:0""
+  LFB_COX_wi.3.a:0""
+  LFB_COX_wi.4.t:0""
+  LFB_COX_wi.4.d:0""
+  LFB_COX_wi.4.a:0""
+  LFB_COX_wi.5.t:0""
+  LFB_COX_wi.5.d:0""
+  LFB_COX_wi.5.a:0""
   LFB_COX_nc.1.t:0"进攻兰州"
   LFB_COX_nc.1.d:0""
   LFB_COX_nc.1.a:0""
@@ -66,6 +81,12 @@
   LFB_COX_nc.3.d:0""
   LFB_COX_nc.3.a:0""
   COX_GAN_war_lose_tt:0"尽管我们竭尽全力，但西北军仍然得以§R全身而退§!。\n\n在西北军撤退时，他们对当地实施了惨绝人寰的焦土政策，这将使我们的整合进度§R倒退§!20点。"
+  LFB_COX_nc.17.t:0""
+  LFB_COX_nc.17.d:0""
+  LFB_COX_nc.17.a:0""
+  LFB_COX_nc.18.t:0""
+  LFB_COX_nc.18.d:0""
+  LFB_COX_nc.18.a:0""
   ##已经完成的事件
   LFB_COX_nc.4.t:0"疯狗之死"
   LFB_COX_nc.4.d:0"£gezifu £gezifu 事情是怎么到这个地步的？整个西北方面军不知道，辻政信也不知道，几个月前，他还是这几十万平方公里土地的唯一主宰。转眼间，兰州和天水接连被攻克，整支西北方面军都被红军彻底包围。\n\n£gezifu £gezifu 等等？红军？\n\n£gezifu £gezifu 但是辻政信没时间想这些，他在中国军队彻底包围指挥部之前找到了一匹快马，头也不回地逃离了。\n\n£gezifu £gezifu “等到我回到东京，我一定要说服军部再给我一支军队，然后再次回到西北！ 再杀一遍！”\n\n£gezifu £gezifu 长途的骑行和滴水未进使得这个六十二岁的老人逐渐体力不支，他的精神逐渐模糊，他的四肢慢慢无力。\n\n£gezifu £gezifu “难道上天真的要亡我于此？”\n\n£gezifu £gezifu 终于，他本能地将马匹的速度降了下来，然后竭尽全力让自己坐在马上。\n\n£gezifu £gezifu “呼，呼，我只需要…休息一会…”\n\n£gezifu £gezifu 他再次醒来时，发现自己的床边围着全村的人，所有人都盯着他，辻政信见过这种眼神，在菲律宾，一个濒死的美国战俘曾经这样看着他\n\n£gezifu £gezifu 辻政信故作镇定地从床上爬起，然后慢慢向村子外面走去，人群中自动让出一条道路。\n\n£gezifu £gezifu 他走出了屋子，一开始是走着的，然后慢慢变成跑步，最后几乎是竭尽全力地跑。\n\n£gezifu £gezifu 土枪，菜刀，锄头，剪刀，都跟在后面。\n\n£gezifu £gezifu 好像是天注定的，辻政信被一块石头绊倒，他很快地翻过身来，恐惧地看着一张张如黄土般的面庞，这些人中，他一个也不认识，但是他们认识他。\n\n£gezifu £gezifu “したくない！ したくない！ 助けて！”（不！不！救救我啊！）"
@@ -222,6 +243,6 @@
   NCC_xu_liang_desc:0"徐良永远也不会想到，自己有一天居然能成为中华民国的真正掌权者，自从张作霖离开北京以来，中华民国的权力中心终于在一次回到了华北。自1941年以来，徐良就是改组政府中华北势力的最高代表，始终与权力中心保持着密切联系。这种联系与其说是中央给予的嘉奖，不如说是对华北派的怜悯。从那之后，往日里繁荣的北平一天天消沉下去，从旧日里权力的中心变成了华北的一个不重要的城市。“那是中国以前的首都”人们如此评论道。而南京和上海，作为新的经济政治中心慢慢吸引了越来越多的人。徐良将这一切视作对华北的抛弃。但是现在，再造民国的机会就在他眼前，他有机会将权力的中心再次回到华北。当然徐良也清楚，如果战争打输了，自己也难逃一死。不过整个共荣圈都已经全面介入了，还能有什么问题呢？"
   
   #结语
-  TNO_CountryClosing_epilogue_COX:0 "至此，新疆苏维埃政府的故事便暂告一段落。农业与工业的体系已经基本完善，军阀和流寇的影响也已清扫干净。农民和工人无比拥护这支自贝加尔湖归来的红军，红日再一次照耀在这片大地上。地方宗教势力和别派人士也暂时被收拢在了抗日民族统一战线之中。于情于理，这些都是好事。但，内部问题解决了，外部却仍风云变幻：西方，哈萨克斯坦统一战争正摩拳擦掌；北方，俄罗斯大地上第一批有希望统一的军阀正勾心斗角，他们对我们的态度尚不可知；东北，蒙疆伪政府的领导者亲王也岌岌可危；南方，高山之国依然与世隔绝。他们是敌人，还是可以团结的朋友？犹未可知。而在极东，旭日帝国已经注意到这颗闪烁的红星。它会心血来潮，吹灭这粒火星；抑或视而不见，直至“共荣圈”被人民战争的烈火焚烧殆尽？敬请等待下个版本更新吧。"
+   "至此，新疆苏维埃政府的故事便暂告一段落。农业与工业的体系已经基本完善，军阀和流寇的影响也已清扫干净。农民和工人无比拥护这支自贝加尔湖归来的红军，红日再一次照耀在这片大地上。地方宗教势力和别派人士也暂时被收拢在了抗日民族统一战线之中。于情于理，这些都是好事。但，内部问题解决了，外部却仍风云变幻：西方，哈萨克斯坦统一战争正摩拳擦掌；北方，俄罗斯大地上第一批有希望统一的军阀正勾心斗角，他们对我们的态度尚不可知；东北，蒙疆伪政府的领导者亲王也岌岌可危；南方，高山之国依然与世隔绝。他们是敌人，还是可以团结的朋友？犹未可知。而在极东，旭日帝国已经注意到这颗闪烁的红星。它会心血来潮，吹灭这粒火星；抑或视而不见，直至“共荣圈”被人民战争的烈火焚烧殆尽？敬请等待下个版本更新吧。"
   TNO_CountryClosing_epilogue_COX:1 "新疆革命胜利、土地改革成功、根据地建设热火朝天...事情的顺利远远超出了毛岸英的想象。革命看起来一帆风顺，全中国的革命蓝图似乎也清晰了——果真如此么？\n\n未必。边区仍困于无边黄沙，马匪们日夜不休侵扰边境....更遑论在边区东方，还有一支旭日帝国的精锐在等着红军指战员们。\n\n来自贝加尔湖的光要照耀这片久经创伤的土地，仍然任重而道远。对现在的中国而言，中国旅为西北带来的这缕星光虽然微弱，但弥足珍贵。要掀翻这可笑的新秩序，共产党就必须向大地深处扎根，直到能够掀翻这片土地将所有寄生虫压在脚下，直到那颗在地平线上若隐若现的红星能真正照耀中国。""
   TNO_CountryClosing_epilogue_XBJ:"旷野之上，刘少奇正沉思着。而在他面前的，赫然是部队打扫完战场之后，堆起来的红军士兵尸体。\n向远方眺望，兰州城楼上，鲜红的旭日旗依旧飘扬。与预期的一鼓作气解放兰州不同，主攻兰州的部队被铺天盖地的炮火与炸弹淹没，再无法前进一步。红军与日军之间的差距，远不是抗日救国的决心能弥补的。面前的兰州犹如天堑，不知如何是好。\n而在西南，龙云发起了声势浩大的护国运动，誓要将中国从旭日的镣铐下解放，东亚维持了20年的表面和平终被打破。可西南的战局仍不明朗…仅凭云贵两省，真的可以敌的过装备精良训练有素的伪民国军队吗？\n\n不过，对于坐镇乌鲁木齐的毛岸英来说，属于他的万里长征才刚刚开始……"
