补充了缺失的一些事件

--- a/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_decisions_l_simp_chinese.yml
@@ -110,7 +110,7 @@
  
  #新疆早期工业建设决议组（第一版）
   COX_industrialization:0 "新疆工业恢复计划"
-  COX_industrialization_desc:0 "土地改革的顺利完成，使得我们终于能够分出精力来处理新疆工业的烂摊子。在盛世才无能的治理之下，消极怠工已经成为了一种弥漫在工人之间的风气，无人维护的机床连开动起来都显得困难，罔论制造任何产品了。我们将通过抢修、购买机器和培训工人等等手段，挽救摇摇欲坠的新疆工业。\n§B目前有§! §M[?machine_tool|0Y]§! §B单位的机床可以支持我们的工业恢复计划§!\n§B目前有§! §M[?worker_available|0Y]§! §B单位的空闲工人可以分配§!"
+  COX_industrialization_desc:0 "土地改革的顺利完成，使得我们终于能够分出精力来处理新疆工业的烂摊子。在盛世才无能的治理之下，消极怠工已经成为了一种弥漫在工人之间的风气，无人维护的机床连开动起来都显得困难，罔论制造任何产品了。我们将通过抢修、购买机器和培训工人等等手段，挽救摇摇欲坠的新疆工业。（点击齿轮或电力图标选择模式）\n§B目前有§! §M[?machine_tool|0Y]§! §B单位的机床可以支持我们的工业恢复计划§!\n§B目前有§! §M[?worker_available|0Y]§! §B单位的空闲工人可以分配§!"
   check_old_machines:0 "抢修旧机床"
   buy_new_machines:0 "向布里亚特购买机床"
   build_civilian_factory:0 "整顿民用工厂"
